Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I0acd1bf9cb484251df0a025179c001f527aad09a

Former-commit-id: bd23528a6e26e4879480ac2735e0a270072a7b8b

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"በርቷል"</string>
     <string name="off" msgid="2898123876644709799">"ጠፍቷል"</string>
     <string name="device_info_default" msgid="1406619232867343310">"ያልታወቀ"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">አሁን ገንቢ ለመሆን <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ደረጃዎች ይቀርዎታል።</item>
       <item quantity="other">አሁን ገንቢ ለመሆን <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ደረጃዎች ይቀርዎታል።</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"ዝለል"</string>
     <string name="next_label" msgid="1248293387735652187">"ቀጥል"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ቋንቋዎች"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"የተመረጠ ቋንቋ ቅደም ተከተል"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"የስርዓት ቋንቋ"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"አስወግድ"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ቋንቋ አክል"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ቋንቋ"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"የተመረጠ ቋንቋ"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"የመተግበሪያ ቋንቋዎች"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"የመተግበሪያ ቋንቋዎች"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ለእያንዳንዱ መተግበሪያ ቋንቋውን ያዘጋጁ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"የመተግበሪያ ቋንቋ"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"የመተግበሪያ ቋንቋ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"የተጠቆሙ ቋንቋዎች"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ሁሉም ቋንቋዎች"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"የስርዓት ቋንቋ"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ለዚህ መተግበሪያ የቋንቋ መረጣ ከቅንብሮች አይገኝም።"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ቋንቋ በመተግበሪያው ውስጥ ካሉ ቋንቋዎች ሊለያይ ይችላል። አንዳንድ መተግበሪያዎች ይህን ቅንብር ላይደግፉ ይችላሉ።"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"እዚህ የሚታዩት የቋንቋ ምርጫን የሚደግፉ መተግበሪያዎች ብቻ ናቸው።"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"የእርስዎ ስርዓት፣ መተግበሪያዎች እና ድር ጣቢያዎች ከእርስዎ የተመረጡ ቋንቋዎች ውስጥ የመጀመሪያውን የተደገፈ ቋንቋ ይጠቀማሉ።"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ለእያንዳንዱ መተግበሪያ ቋንቋ ለመምረጥ ወደ መተግበሪያ ቋንቋ ቅንብሮች ይሂዱ።"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ስለቋንቋዎች የበለጠ ይረዱ"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">የተመረጡት ቋንቋዎች ይወገዱ?</item>
       <item quantity="other">የተመረጡት ቋንቋዎች ይወገዱ?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"ጽሁፍ በሌላ ቋንቋ ይታያል።"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ሁሉንም ቋንቋዎች ማስወገድ አይቻልም"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"ቢያንስ አንድ የተመረጠ ቋንቋ ያቆዩ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"እንደ የስርዓት ቋንቋ አይገኝም"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"በአንዳንድ መተግበሪያዎች ውስጥ ላይገኝ ይችላል"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ወደ ላይ ውሰድ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ወደ ታች ውሰድ"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ወደ ላይ ውሰድ"</string>
@@ -1309,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"በሚወሰድበት ጊዜ <xliff:g id="NAME">^1</xliff:g>ን አያስወግዱት። \n\nመውሰዱ እስኪጠናቀቅ ድረስ በዚህ መሣሪያ ላይ ያለው የ<xliff:g id="APP">^2</xliff:g> የሚገኝ አይሆንም።"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ይህን <xliff:g id="NAME">^1</xliff:g> እንዴት ይጠቀሙበታል?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"በዚህ ጡባዊ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን ያከማቹ። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;።"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"በዚህ ስልክ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን ያስቀምጡ። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;።"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ወይም"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ኤስዲ ካርድን ለተንቀሳቃሽ ማከማቻ ቅርጸት ይስሩበት"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ፎቶዎችን፣ ቪድዮዎችን፣ ሙዚቃን እና ሌሎችንም ያከማቹ እና ከሌሎች መሣሪያዎች ሆነው ይድረሷቸው። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;።"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"በኋላ ያዋቅሩ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ይህ <xliff:g id="NAME">^1</xliff:g> ይቀረጽ?"</string>
@@ -1450,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"ዩኤስቢ፣ ብሉቱዝ፣ ኤተርኔት"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"መገናኛ ነጥብ፣ ዩኤስቢ፣ ብሉቱዝ፣ ኤተርኔት"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"በይነመረብ ለሌሎች መሣሪያዎች አይጋራም"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"እንደ ሞደም መሰካት"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"የWi‑Fi መገናኛ ነጥብን አትጠቀም"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"በዩኤስቢ በኩል ብቻ በይነመረብን አጋራ"</string>
@@ -4792,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ዝቅተኛው የሚበቃ ቀሪ ሂሳብ (የተተወ)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ዝቅተኛው የሚበቃ ቀሪ ሂሳብ (በይነገጽ-አልባ የስርዓት መተግበሪያ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ዝቅተኛው የሚበቃ ቀሪ ሂሳብ (ቀሪ መተግበሪያዎች)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ኃይል በመሙላት ላይ"</item>
     <item msgid="658627268149681677">"ባትሪ አጠቃቀም"</item>
