--- a/res/values-b+sr+Latn/strings.xml
+++ b/res/values-b+sr+Latn/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Uključeno"</string>
     <string name="off" msgid="2898123876644709799">"Isključeno"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Nepoznato"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Dodirnite da biste videli informacije"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Treba da obavite još <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> korak da biste postali programer.</item>
       <item quantity="few">Treba da obavite još <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> koraka da biste postali programer.</item>
@@ -153,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Preskoči"</string>
     <string name="next_label" msgid="1248293387735652187">"Dalje"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Jezici"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Redosled željenih jezika"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Jezik sistema"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Ukloni"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Dodajte jezik"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Jezik"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Željeni jezik"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Jezici aplikacija"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Jezici u aplikaciji"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Podesite jezik za svaku aplikaciju"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Jezik aplikacije"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Jezik aplikacije"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Predloženi jezici"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Svi jezici"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Jezik sistema"</string>
@@ -169,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Izbor jezika za ovu aplikaciju nije dostupan iz Podešavanja."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Jezik može da se razlikuje od jezika dostupnih u aplikaciji. Neke aplikacije možda ne podržavaju ovo podešavanje."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Ovde se prikazuju samo aplikacije koje podržavaju izbor jezika."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistem, aplikacije i veb-sajtovi koriste prvi podržani jezik iz željenih jezika."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Da biste izabrali jezik za svaku aplikaciju, idite u podešavanja jezika aplikacije."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Saznajte više o jezicima"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Želite li da uklonite izabrane jezike?</item>
       <item quantity="few">Želite li da uklonite izabrane jezike?</item>
@@ -180,7 +176,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekst će biti prikazan na nekom drugom jeziku."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nije moguće ukloniti sve jezike"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Zadržite bar jedan željeni jezik"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nije dostupno kao jezik sistema"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Možda nije dostupno u nekim aplikacijama"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Premesti nagore"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Premesti nadole"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Premesti na vrh"</string>
@@ -1468,6 +1464,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, eternet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, eternet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internet se ne deli sa drugim uređajima"</string>
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Isključeno"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Privezivanje"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Nemoj da koristiš Wi‑Fi hotspot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Deli internet samo preko USB-a"</string>
@@ -4857,6 +4854,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimalni balans sa potpuno napunjenim uređajem (izuzeto)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimalni balans sa potpuno punim uređajem (sistemska bez grafičkog interfejsa)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimalni balans sa potpuno napunjenim uređajem (preostale aplikacije)"</string>
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Dodavanje minimalnog balansa za napunjeni uređaj (alatke za ažuriranje aplikacija)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Punjenje"</item>
     <item msgid="658627268149681677">"Dremanje"</item>
