--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Activado"</string>
     <string name="off" msgid="2898123876644709799">"Desactivado"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Desconocido"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Estás a <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> pasos de ser desarrollador.</item>
       <item quantity="one">Estás a <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> paso de ser desarrollador.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Saltar"</string>
     <string name="next_label" msgid="1248293387735652187">"Siguiente"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Idiomas"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Orden de idiomas preferidos"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Idioma del sistema"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Quitar"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Añadir un idioma"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Idioma"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Idioma preferido"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Idiomas de las aplicaciones"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Idiomas de las aplicaciones"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Establece el idioma de cada aplicación"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Idioma de la aplicación"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Idioma de la aplicación"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Idiomas recomendados"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Todos los idiomas"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Idioma del sistema"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"La selección de idioma para esta aplicación no está disponible en Ajustes."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Puede que el idioma no coincida con los que hay disponibles en la aplicación. Algunas aplicaciones no son compatibles con este ajuste."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Aquí solo se muestran las aplicaciones que admiten la selección de idioma."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Tu sistema, aplicaciones y sitios web usan el primer idioma compatible de tus idiomas preferidos."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Para seleccionar un idioma para cada aplicación, ve a los ajustes de idioma de la aplicación."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Más información sobre los idiomas"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">¿Quitar idiomas seleccionados?</item>
       <item quantity="one">¿Quitar idioma seleccionado?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"El texto se mostrará en otro idioma."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"No puedes quitar todos los idiomas"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Guarda al menos un idioma preferido"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"No está disponible como idioma del sistema"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Es posible que no esté disponible en algunas aplicaciones"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Mover hacia arriba"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Mover hacia abajo"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Mover al principio"</string>
@@ -1447,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth y Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Compartir Internet, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"No se está compartiendo Internet con otros dispositivos"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Compartir conexión"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"No usar Compartir Internet"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Compartir Internet solo mediante USB"</string>
@@ -4262,7 +4261,7 @@
     <string name="app_info_storage_title" msgid="4076977173803093808">"Espacio usado"</string>
     <string name="webview_uninstalled_for_user" msgid="627352948986275488">"(opción desinstalada para <xliff:g id="USER">%s</xliff:g>)"</string>
     <string name="webview_disabled_for_user" msgid="5809886172032644498">"(opción inhabilitada para <xliff:g id="USER">%s</xliff:g>)"</string>
-    <string name="autofill_app" msgid="7595308061826307921">"Servicio de Autocompletar"</string>
+    <string name="autofill_app" msgid="7595308061826307921">"Servicio de autocompletado"</string>
     <string name="autofill_passwords" msgid="6708057251459761083">"Contraseñas"</string>
     <plurals name="autofill_passwords_count" formatted="false" msgid="7715009165029452622">
       <item quantity="other"><xliff:g id="COUNT_1">%1$d</xliff:g> contraseñas</item>
@@ -4789,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Saldo mínimo con carga completa (exento)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Saldo mínimo con carga completa (aplicación del sistema sin interfaz gráfica)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Saldo mínimo con carga completa (aplicaciones restantes)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Carga"</item>
     <item msgid="658627268149681677">"Descanso"</item>
