--- a/res/values-hi/strings.xml
+++ b/res/values-hi/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"चालू है"</string>
     <string name="off" msgid="2898123876644709799">"बंद है"</string>
     <string name="device_info_default" msgid="1406619232867343310">"अनजान"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">अब आप डेवलपर बनने से <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> कदम दूर हैं.</item>
       <item quantity="other">अब आप डेवलपर बनने से <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> कदम दूर हैं.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"अभी नहीं"</string>
     <string name="next_label" msgid="1248293387735652187">"आगे बढ़ें"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"भाषाएं"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"पसंदीदा भाषा का क्रम"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"सिस्टम की भाषा"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"हटाएं"</string>
     <string name="add_a_language" msgid="2126220398077503271">"भाषा जोड़ें"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"भाषा"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"पसंदीदा भाषा"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ऐप्लिकेशन की भाषाएं"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ऐप्लिकेशन की भाषाएं"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"हर ऐप्लिकेशन के लिए भाषा सेट करें"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ऐप्लिकेशन की भाषा"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ऐप्लिकेशन की भाषा"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"सुझाई गई भाषाएं"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"सभी भाषाएं"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"सिस्टम की भाषा"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"सेटिंग में, इस ऐप्लिकेशन की भाषा चुनने का विकल्प मौजूद नहीं है."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"भाषा, ऐप्लिकेशन में उपलब्ध भाषाओं से अलग हो सकती है. हो सकता है कि कुछ ऐप्लिकेशन के साथ, भाषा की यह सेटिंग काम न करे."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"यहां सिर्फ़ वे ऐप्लिकेशन दिखाए गए हैं जिनमें भाषा चुनने का विकल्प मौजूद है."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"आपके सिस्टम, ऐप्लिकेशन, और वेबसाइट में, आपकी पसंदीदा भाषाओं में से पहली उपलब्ध भाषा का इस्तेमाल होता है."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"अगर आपको हर ऐप्लिकेशन के लिए अलग भाषा चुननी है, तो ऐप्लिकेशन की भाषा सेटिंग पर जाएं."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"भाषाओं के बारे में ज़्यादा जानें"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">क्या आप चुनी गई भाषा हटाना चाहते हैं?</item>
       <item quantity="other">क्या आप चुनी गई भाषाएं हटाना चाहते हैं?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"लेख किसी अन्य भाषा में प्रदर्शित किया जाएगा."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"सभी भाषाएं नहीं निकाली जा सकती हैं"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"कम से कम एक पसंदीदा भाषा रखें"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"यह सिस्टम की भाषा के तौर पर उपलब्ध नहीं है"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"हो सकता है कि कुछ ऐप्लिकेशन में उपलब्ध ना हो"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ऊपर ले जाएं"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"नीचे ले जाएं"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"शीर्ष पर ले जाएं"</string>
@@ -1447,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"यूएसबी, ब्लूटूथ, ईथरनेट"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"हॉटस्पॉट, यूएसबी, ब्लूटूथ, ईथरनेट"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"इंटरनेट को दूसरे डिवाइस से शेयर नहीं किया जा रहा है"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"टेदरिंग"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"वाई-फ़ाई हॉटस्पॉट का इस्तेमाल न करें"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"सिर्फ़ यूएसबी के ज़रिए इंटरनेट शेयर करें"</string>
@@ -4789,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (जिन ऐप्लिकेशन को छूट दी गई है)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (बिना यूज़र इंटरफ़ेस वाला सिस्टम ऐप)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"बैटरी पूरी चार्ज होने पर, कम से कम बैलेंस (बाकी ऐप्लिकेशन)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"बैटरी चार्ज हो रही है"</item>
     <item msgid="658627268149681677">"बैटरी बचाएं (डोज़)"</item>
