--- a/res/values-km/strings.xml
+++ b/res/values-km/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"បើក"</string>
     <string name="off" msgid="2898123876644709799">"បិទ"</string>
     <string name="device_info_default" msgid="1406619232867343310">"មិន​ស្គាល់"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">ឥឡូវនេះអ្នកនៅសល់ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ជំហានទៀតដើម្បីក្លាយជាអ្នកអភិវឌ្ឍន៍។</item>
       <item quantity="one">ឥឡូវនេះអ្នកនៅសល់ <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> ជំហានទៀតដើម្បីក្លាយជាអ្នកអភិវឌ្ឍន៍។</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"រំលង"</string>
     <string name="next_label" msgid="1248293387735652187">"បន្ទាប់​"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ភាសា"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"លំដាប់​ភាសាដែលចង់ប្រើ"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"ភាសាប្រព័ន្ធ"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"លុប"</string>
     <string name="add_a_language" msgid="2126220398077503271">"បន្ថែមភាសា"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ភាសា"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ភាសា​អាទិភាព"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ភាសាកម្មវិធី"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ភាសាកម្មវិធី"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"កំណត់ភាសាសម្រាប់កម្មវិធីនីមួយៗ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ភាសា​កម្មវិធី"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ភាសា​កម្មវិធី"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ភាសា​ដែល​បាន​ណែ​នាំ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ភាសាទាំងអស់"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ភាសាប្រព័ន្ធ"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"មិនអាចជ្រើសរើសភាសាសម្រាប់កម្មវិធីនេះពីការកំណត់បានទេ។"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ភាសាអាចមាន​ភាពខុសគ្នាពី​ភាសាដែលមាននៅក្នុង​កម្មវិធី។ កម្មវិធីមួយចំនួន​ប្រហែលជាមិនអាចប្រើ​ការកំណត់នេះបានទេ។"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"មានតែកម្មវិធីដែលស្គាល់ការជ្រើសរើសភាសាប៉ុណ្ណោះ​ដែលបង្ហាញនៅទីនេះ។"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"ប្រព័ន្ធ កម្មវិធី និងគេហទំព័រ​របស់អ្នក​ប្រើភាសាដែលស្គាល់ដំបូងគេពី​ភាសាដែលអ្នកចង់ប្រើ។"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ដើម្បីជ្រើសរើស​ភាសាសម្រាប់​កម្មវិធីនីមួយៗ សូមចូលទៅកាន់​ការកំណត់ភាសាកម្មវិធី។"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ស្វែងយល់បន្ថែម​អំពីភាសា"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">លុបភាសាដែលបានជ្រើសរើសឬ?</item>
       <item quantity="one">លុបភាសាដែលបានជ្រើសរើសឬ?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"អត្ថបទនឹងត្រូវបានបង្ហាញជាភាសាផ្សេងទៀត។"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"មិនអាចយកភាសាទាំងអស់ចេញបានទេ"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"រក្សាភាសាដែលពេញចិត្តយ៉ាងហោចណាស់មួយ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"មិនមានជា​ភាសាប្រព័ន្ធទេ"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"ប្រហែលជាមិនអាចប្រើបាននៅក្នុងកម្មវិធីមួយចំនួន"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ផ្លាស់ទីឡើងលើ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ផ្លាស់ទីចុះក្រោម"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ផ្លាស់ទីទៅកំពូល"</string>
@@ -1096,8 +1093,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"កម្រិតច្បាស់​ពេញលេញប្រើថ្មរបស់អ្នកច្រើនជាង។ ការប្ដូរកម្រិតគុណភាពរបស់អ្នកអាចបណ្តាលឱ្យកម្មវិធីមួយចំនួនចាប់ផ្តើមឡើងវិញ។"</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"បានជ្រើសរើស"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"ពណ៌"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ធម្មជាតិ"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"បង្កើនពន្លឺ"</string>
@@ -1310,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"កុំដក <xliff:g id="NAME">^1</xliff:g> ចេញអំឡុងពេលធ្វើការផ្លាស់ទី។ \n\nកម្មវិធី <xliff:g id="APP">^2</xliff:g> នៅលើឧបករណ៍នេះនឹងមិនមានទេ រហូតដល់ការផ្លាស់ទីបញ្ចប់។"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"តើ​អ្នក​នឹង​ប្រើ <xliff:g id="NAME">^1</xliff:g> នេះ​ដោយ​របៀប​ណា?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ឈូស​កាត SD សម្រាប់​ប្រើ​ជា​ទំហំ​​ផ្ទុក​ខាង​ក្នុង"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"រក្សា​ទុក​កម្មវិធី និង​មេឌៀ ដើម្បី​ប្រើប្រាស់​នៅ​លើ​ថេប្លេត​នេះ​តែ​ប៉ុណ្ណោះ។ &lt;a href=https://support.google.com/android/answer/12153449&gt;ស្វែង​យល់​បន្ថែម​អំពី​ការរៀបចំ​កាត SD&lt;/a&gt;។"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ឈូស"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ឈូស​កាត SD សម្រាប់​ប្រើ​ជា​ទំហំ​​ផ្ទុក​ខាង​ក្នុង"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"រក្សា​ទុក​កម្មវិធី និង​មេឌៀ ដើម្បី​ប្រើប្រាស់​នៅ​លើ​ទូរសព្ទ​នេះ​តែ​ប៉ុណ្ណោះ។ &lt;a href=https://support.google.com/android/answer/12153449&gt;ស្វែង​យល់​បន្ថែម​អំពី​ការរៀបចំ​កាត SD&lt;/a&gt;។"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ឈូស"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ឬ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ឈូស​កាត SD សម្រាប់​ប្រើ​ជា​ទំហំ​ផ្ទុក​ចល័ត"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"រក្សា​ទុក​រូបថត វីដេអូ តន្ត្រី និង​អ្វីៗ​ជាច្រើន​ទៀត ព្រមទាំង​ចូល​ប្រើប្រាស់​អ្វី​ទាំង​នេះ​ពី​ឧបករណ៍​ផ្សេង​ទៀត។ &lt;a href=https://support.google.com/android/answer/12153449&gt;ស្វែង​យល់​បន្ថែម​អំពី​ការរៀបចំ​កាត SD&lt;/a&gt;។"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ឈូស"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"រៀបចំ​នៅពេល​ក្រោយ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"សម្អាត <xliff:g id="NAME">^1</xliff:g> នេះ​ដែរទេ?"</string>
@@ -1451,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ប៊្លូធូស, អ៊ីសឺរណិត"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ហតស្ប៉ត, USB, ប៊្លូធូស, អ៊ីសឺរណិត"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"មិនកំពុង​ចែករំលែក​អ៊ីនធឺណិត​ជាមួយ​ឧបករណ៍​ផ្សេងទៀត​នោះទេ"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ការ​ភ្ជាប់"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"កុំប្រើ​ហតស្ប៉ត Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"ចែករំលែក​អ៊ីនធឺណិត​តាមរយៈ USB តែប៉ុណ្ណោះ"</string>
@@ -4793,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"សមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធី​ដែលបាន​លើកលែង)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"សមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធី​ប្រព័ន្ធដែល​គ្មានផ្ទៃប៉ះ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"សមតុល្យទាបបំផុត​ពេលសាកថ្មពេញ (កម្មវិធី​ដែលនៅសល់)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"កំពុងសាកថ្ម"</item>
     <item msgid="658627268149681677">"ដូស"</item>
