--- a/res/values-mr/strings.xml
+++ b/res/values-mr/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"सुरू आहे"</string>
     <string name="off" msgid="2898123876644709799">"बंद आहे"</string>
     <string name="device_info_default" msgid="1406619232867343310">"अज्ञात"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"माहिती दाखवण्यासाठी टॅप करा"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">तुम्ही आता डेव्हलपर बनण्यापासून <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> पायऱ्या दूर आहात.</item>
       <item quantity="one">तुम्ही आता डेव्हलपर बनण्यापासून <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> पायरी दूर आहात.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"वगळा"</string>
     <string name="next_label" msgid="1248293387735652187">"पुढील"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"भाषा"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"प्राधान्य असलेल्या भाषेचा क्रम"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"सिस्टीमची भाषा"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"काढा"</string>
     <string name="add_a_language" msgid="2126220398077503271">"एक भाषा जोडा"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"भाषा"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"प्राधान्य दिलेली भाषा"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ॲपच्या भाषा"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ॲपच्या भाषा"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"प्रत्येक ॲपसाठी भाषा सेट करा"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"अ‍ॅपची भाषा"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"अ‍ॅपची भाषा"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"सुचवलेल्या भाषा"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"सर्व भाषा"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"सिस्टीम भाषा"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"या अ‍ॅपसाठीची भाषा निवडणे हे सेटिंग्ज मध्ये उपलब्ध नाही."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"अ‍ॅपमध्ये उपलब्ध असलेल्या भाषांपेक्षा भाषा वेगळी असू शकते. काही अ‍ॅप्स कदाचित या सेटिंगला सपोर्ट करत नाहीत."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"येथे फक्त भाषेच्या निवडीला सपोर्ट करणारी अ‍ॅप्स दाखवली आहेत."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"तुमची सिस्टीम, अ‍ॅप्स आणि वेबसाइट या तुमच्या प्राधान्य दिलेल्या भाषांमधील पहिली सपोर्ट असलेली भाषा वापरतात."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"प्रत्येक अ‍ॅपसाठी भाषा निवडण्यासाठी, अ‍ॅप भाषा सेटिंग्जवर जा."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"भाषांबद्दल अधिक जाणून घ्या"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">निवडक भाषा काढायच्या?</item>
       <item quantity="one">निवडक भाषा काढायची?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"मजकूर दुसऱ्या भाषेत डिस्प्ले केला जाईल."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"सर्व भाषा काढू शकत नाही"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"किमान एक प्राधान्यीकृत भाषा ठेवा"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"सिस्टीम भाषा म्हणून उपलब्ध नाही"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"काही ॲपसमध्ये उपलब्ध होऊ शकत नाही"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"वर हलवा"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"खाली हलवा"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"शीर्षस्थानी हलवा"</string>
@@ -1309,17 +1305,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"हलविण्‍यादरम्यान <xliff:g id="NAME">^1</xliff:g> काढू नका. \n\nहलविणे पूर्ण होईपर्यंत या डिव्‍हाइसवरील <xliff:g id="APP">^2</xliff:g> अ‍ॅप उपलब्‍ध नसेल."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"तुम्ही हे <xliff:g id="NAME">^1</xliff:g> कसे वापराल?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"अंतर्गत स्टोरेजसाठी SD कार्ड फॉरमॅट करा"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"फक्त या टॅबलेटवर वापरण्यासाठी ॲप्स आणि मीडिया स्टोअर करा. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेट करण्याबद्दल अधिक जाणून घ्या&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"फॉरमॅट करा"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"अंतर्गत स्टोरेजसाठी SD कार्ड फॉरमॅट करा"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"फक्त या फोनवर वापरण्यासाठी ॲप्स आणि मीडिया स्टोअर करा. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेट करण्याबद्दल अधिक जाणून घ्या&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"फॉरमॅट करा"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"किंवा"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"पोर्टेबल स्टोरेजसाठी SD कार्ड फॉरमॅट करा"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"फोटो, व्हिडिओ, संगीत आणि आणखी बरेच काही स्टोअर करा व ते इतर डिव्हाइसवरून अ‍ॅक्सेस करा. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेट करण्याबद्दल अधिक जाणून घ्या&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"फॉरमॅट करा"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"नंतर सेट करा"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> हे फॉरमॅट करायचे का?"</string>
@@ -1450,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ब्लूटूथ, इथरनेट"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"हॉटस्पॉट, USB, ब्लूटूथ, इथरनेट"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"इतर डिव्हाइससह इंटरनेट शेअर करत नाही"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"टेदरिंग"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"वाय-फाय हॉटस्पॉट वापरू नका"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"फक्त USB द्वारे इंटरनेट शेअर करा"</string>
@@ -4792,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"पूर्ण चार्जिंगवर किमान शिल्लक बॅटरी (वगळलेली)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"पूर्ण चार्जिंगवर किमान शिल्लक बॅटरी (हेडलेस सिस्टीम ॲप)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"पूर्ण चार्जिंगवर किमान शिल्लक बॅटरी (उरलेली ॲप्स)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"चार्ज होत आहे"</item>
     <item msgid="658627268149681677">"डोझ"</item>
