--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"ਚਾਲੂ"</string>
     <string name="off" msgid="2898123876644709799">"ਬੰਦ"</string>
     <string name="device_info_default" msgid="1406619232867343310">"ਅਗਿਆਤ"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"ਜਾਣਕਾਰੀ ਦਿਖਾਉਣ ਲਈ ਟੈਪ ਕਰੋ"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">ਤੁਸੀਂ ਹੁਣ ਇੱਕ ਵਿਕਾਸਕਾਰ ਬਣਨ ਤੋਂ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ਕਦਮ ਦੂਰ ਹੋ।</item>
       <item quantity="other">ਤੁਸੀਂ ਹੁਣ ਇੱਕ ਵਿਕਾਸਕਾਰ ਬਣਨ ਤੋਂ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ਕਦਮ ਦੂਰ ਹੋ।</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"ਛੱਡੋ"</string>
     <string name="next_label" msgid="1248293387735652187">"ਅੱਗੇ"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ਭਾਸ਼ਾਵਾਂ"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"ਤਰਜੀਹੀ ਭਾਸ਼ਾ ਕ੍ਰਮ"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"ਸਿਸਟਮ ਦੀ ਭਾਸ਼ਾ"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ਹਟਾਓ"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ਇੱਕ ਭਾਸ਼ਾ ਸ਼ਾਮਲ ਕਰੋ"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ਭਾਸ਼ਾ"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ਤਰਜੀਹੀ ਭਾਸ਼ਾ"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ਐਪ ਦੀਆਂ ਭਾਸ਼ਾਵਾਂ"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ਐਪ ਦੀਆਂ ਭਾਸ਼ਾਵਾਂ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ਹਰੇਕ ਐਪ ਲਈ ਭਾਸ਼ਾ ਸੈੱਟ ਕਰੋ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ਐਪ ਦੀ ਭਾਸ਼ਾ"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ਐਪ ਦੀ ਭਾਸ਼ਾ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ਸੁਝਾਈਆਂ ਗਈਆਂ ਭਾਸ਼ਾਵਾਂ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ਸਾਰੀਆਂ ਭਾਸ਼ਾਵਾਂ"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ਸਿਸਟਮ ਦੀ ਭਾਸ਼ਾ"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਇਸ ਐਪ ਲਈ ਭਾਸ਼ਾ ਦੀ ਚੋਣ ਉਪਲਬਧ ਨਹੀਂ ਹੈ।"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ਭਾਸ਼ਾ ਐਪ ਵਿਚਲੀਆਂ ਉਪਲਬਧ ਭਾਸ਼ਾਵਾਂ ਨਾਲੋਂ ਵੱਖਰੀ ਹੋ ਸਕਦੀ ਹੈ। ਕੁਝ ਐਪਾਂ ਸ਼ਾਇਦ ਇਸ ਸੈਟਿੰਗਾਂ ਦਾ ਸਮਰਥਨ ਨਾ ਕਰਨ।"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"ਸਿਰਫ਼ ਉਹ ਐਪਾਂ ਹੀ ਇੱਥੇ ਦਿਖਾਈਆਂ ਜਾਂਦੀਆਂ ਹਨ ਜੋ ਭਾਸ਼ਾ ਦੀ ਚੋਣ ਦਾ ਸਮਰਥਨ ਕਰਦੀਆਂ ਹਨ।"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"ਤੁਹਾਡਾ ਸਿਸਟਮ, ਐਪਾਂ ਅਤੇ ਵੈੱਬਸਾਈਟਾਂ ਤੁਹਾਡੀਆਂ ਤਰਜੀਹੀ ਭਾਸ਼ਾਵਾਂ ਵਿੱਚੋਂ ਪਹਿਲੀ ਸਮਰਥਿਤ ਭਾਸ਼ਾ ਦੀ ਵਰਤੋਂ ਕਰਦੀਆਂ ਹਨ।"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ਹਰੇਕ ਐਪ ਲਈ ਇੱਕ ਭਾਸ਼ਾ ਚੁਣਨ ਵਾਸਤੇ, ਐਪ ਦੀਆਂ ਭਾਸ਼ਾ ਸੈਟਿੰਗਾਂ \'ਤੇ ਜਾਓ।"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ਭਾਸ਼ਾਵਾਂ ਬਾਰੇ ਹੋਰ ਜਾਣੋ"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">ਕੀ ਚੁਣੀ ਗਈ ਭਾਸ਼ਾ ਨੂੰ ਹਟਾਉਣਾ ਹੈ?</item>
       <item quantity="other">ਕੀ ਚੁਣੀਆਂ ਗਈਆਂ ਭਾਸ਼ਾਵਾਂ ਨੂੰ ਹਟਾਉਣਾ ਹੈ?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"ਲਿਖਤ ਨੂੰ ਕਿਸੇ ਹੋਰ ਭਾਸ਼ਾ ਵਿੱਚ ਦਿਖਾਇਆ ਜਾਵੇਗਾ"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ਸਾਰੀਆਂ ਭਾਸ਼ਾਵਾਂ ਨੂੰ ਮਿਟਾਇਆ ਨਹੀਂ ਜਾ ਸਕਦਾ"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"ਘੱਟੋ-ਘੱਟ ਇੱਕ ਤਰਜੀਹੀ ਭਾਸ਼ਾ ਨੂੰ ਰੱਖੋ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"ਸਿਸਟਮ ਦੀ ਭਾਸ਼ਾ ਵਜੋਂ ਉਪਲਬਧ ਨਹੀਂ"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"ਹੋ ਸਕਦਾ ਹੈ ਕਿ ਕੁਝ ਐਪਾਂ ਵਿੱਚ ਉਪਲਬਧ ਨਾ ਹੋਵੇ"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ਉੱਪਰ ਲੈ ਜਾਓ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ਹੇਠਾਂ ਲੈ ਜਾਓ"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ਸਿਖਰ \'ਤੇ ਲੈ ਜਾਓ"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ਬਲੂਟੁੱਥ, ਈਥਰਨੈੱਟ"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ਹੌਟਸਪੌਟ, USB, ਬਲੂਟੁੱਥ, ਈਥਰਨੈੱਟ"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ਦੂਜੇ ਡੀਵਾਈਸਾਂ ਨਾਲ ਇੰਟਰਨੈੱਟ ਸਾਂਝਾ ਨਹੀਂ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ਟੈਦਰਿੰਗ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ਵਾਈ-ਫਾਈ ਹੌਟਸਪੌਟ ਨਾ ਵਰਤੋ"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"ਸਿਰਫ਼ USB ਰਾਹੀਂ ਇੰਟਰਨੈੱਟ ਸਾਂਝਾ ਕਰੋ"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਛੋਟ ਦਿੱਤੀ ਗਈ)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਹੈੱਡਲੈੱਸ ਸਿਸਟਮ ਐਪ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ਬੈਟਰੀ ਪੂਰੀ ਚਾਰਜ ਹੋਣ \'ਤੇ ਘੱਟੋ-ਘੱਟ ਬਕਾਇਆ (ਬਾਕੀ ਐਪਾਂ)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ਚਾਰਜ ਹੋ ਰਹੀ ਹੈ"</item>
     <item msgid="658627268149681677">"ਡੋਜ਼"</item>
