--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"ක්‍රියාත්මකයි"</string>
     <string name="off" msgid="2898123876644709799">"ක්‍රියාවිරහිතයි"</string>
     <string name="device_info_default" msgid="1406619232867343310">"නොදනී"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">ඔබට දැන් සංවර්ධකයකු වීමට ඇත්තේ පියවර <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> කි.</item>
       <item quantity="other">ඔබට දැන් සංවර්ධකයකු වීමට ඇත්තේ පියවර <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> කි.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"මඟ හරින්න"</string>
     <string name="next_label" msgid="1248293387735652187">"මීලඟ"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"භාෂා"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"කැමති භාෂා අනුපිළිවෙල"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"පද්ධති භාෂාව"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ඉවත් කරන්න"</string>
     <string name="add_a_language" msgid="2126220398077503271">"භාෂාවක් එක් කරන්න"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"භාෂාව"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"වඩා කැමති භාෂාව"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"යෙදුම් භාෂා"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"යෙදුම් භාෂා"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"එක් එක් යෙදුම සඳහා භාෂාව සකසන්න"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"යෙදුම් භාෂාව"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"යෙදුම් භාෂාව"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"යෝජිත භාෂා"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"සියලු භාෂා"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"පද්ධති භාෂාව"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"මෙම යෙදුම සඳහා භාෂා තේරීම සැකසීම් වෙතින් ලබා ගත නොහැකිය."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"යෙදුමේ තිබෙන භාෂාවලට වඩා භාෂාව වෙනස් විය හැකිය. සමහර යෙදුම් මෙම සැකසීමට සහාය නොදක්වයි."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"භාෂා තේරීමට සහාය දක්වන යෙදුම් පමණක් මෙහි පෙන්වනු ලැබේ."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"ඔබේ පද්ධතිය, යෙදුම්, සහ වෙබ් අඩවි ඔබ කැමති භාෂාවලින් පළමුව සහාය දක්වන භාෂාව භාවිතා කරයි."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"එක් එක් යෙදුම සඳහා භාෂාවක් තේරීමට, යෙදුම් භාෂා සැකසීම් වෙත යන්න."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"භාෂා පිළිබඳව තව දැන ගන්න"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">තෝරා ගත් භාෂා ඉවත් කරන්නද?</item>
       <item quantity="other">තෝරා ගත් භාෂා ඉවත් කරන්නද?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"පෙළ වෙනත් භාෂාවකින් සංදර්ශනය කරනු ඇත."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"සියලු භාෂා ඉවත් කළ නොහැකිය"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"අඩු තරමින් එක් මනාප භාෂාවක් තබා ගන්න"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"පද්ධති භාෂාව ලෙස ලබා ගත නොහැක"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"සමහර යෙදුම් තුළ ලබා ගත නොහැකි විය හැකිය"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ඉහළට ගෙන යන්න"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"පහළට ගෙන යන්න"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ඉහළට ගෙන යන්න"</string>
@@ -1096,8 +1093,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"පූර්ණ විභේදනය ඔබේ බැටරිය වැඩියෙන් භාවිත කරයි. ඔබේ විභේදනය මාරු කිරීම සමහර යෙදුම් නැවත ආරම්භ කිරීමට හේතු විය හැක."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"තෝරා ඇත"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"වර්ණ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"ස්වභාවික"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"වැඩි කළ"</string>
@@ -1310,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"ගෙන යාම අතරතුර <xliff:g id="NAME">^1</xliff:g> ඉවත් කරන්න එපා. \n\nගෙන යාම සම්පූර්ණ වන තුරු මෙම උපාංගයේ <xliff:g id="APP">^2</xliff:g> යෙදුම ලබාගත නොහැකි වනු ඇත."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ඔබ මෙම <xliff:g id="NAME">^1</xliff:g> භාවිත කරන්නේ කෙසේද?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"අභ්‍යන්තර ආචයනය සඳහා SD කාඩ්පත ෆෝමැට් කරන්න"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"මෙම ටැබ්ලටයෙහි පමණක් භාවිතා කිරීමට යෙදුම් සහ මාධ්‍ය ගබඩා කරන්න. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD කාඩ්පතක් පිහිටුවීම පිළිබඳව තව දැන ගන්න&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ෆෝමැට් කරන්න"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"අභ්‍යන්තර ආචයනය සඳහා SD කාඩ්පත ෆෝමැට් කරන්න"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"මෙම දුරකථනයෙහි පමණක් භාවිතා කිරීමට යෙදුම් සහ මාධ්‍ය ගබඩා කරන්න. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD කාඩ්පතක් පිහිටුවීම පිළිබඳව තව දැන ගන්න&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ෆෝමැට් කරන්න"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"හෝ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ගෙන යා හැකි ආචයනය සඳහා SD කාඩ්පත ෆෝමැට් කරන්න"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ඡායාරූප, වීඩියෝ, සංගීතය, සහ තවත් දේ ගබඩා කරන්න සහ වෙනත් උපාංගවලින් ඒවාට ප්‍රවේශ වන්න. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD කාඩ්පතක් පිහිටුවීම පිළිබඳව තව දැන ගන්න&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ෆෝමැට් කරන්න"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"පසුව පිහිටුවන්න"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"මෙම <xliff:g id="NAME">^1</xliff:g> හැඩ ගන්වන්නද?"</string>
@@ -1451,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, බ්ලූටූත්, ඊතර්නෙට්"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"හොට්ස්පොට්, USB, බ්ලූටූත්, ඊතර්නෙට්"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"අන්තර්ජාලය වෙනත් උපාංග සමග බෙදා නොගනී"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ටෙදරින්"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi හොට්ස්පොට් භාවිත නොකරන්න"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"USB හරහා පමණක් අන්තර්ජාලය බෙදා ගන්න"</string>
@@ -4793,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"අවම සංතෘප්ත ශේෂය (නිදහස් කර ඇත)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"අවම සංතෘප්ත ශේෂය (ක්‍රියාකාරකම් නැති පද්ධති යෙදුම)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"අවම සංතෘප්ත ශේෂය (ඉතිරි යෙදුම්)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ආරෝපණය වෙමින්"</item>
     <item msgid="658627268149681677">"මාත්‍රාව"</item>
