--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Укључено"</string>
     <string name="off" msgid="2898123876644709799">"Искључено"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Непознато"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Додирните да бисте видели информације"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Треба да обавите још <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> корак да бисте постали програмер.</item>
       <item quantity="few">Треба да обавите још <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> корака да бисте постали програмер.</item>
@@ -153,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Прескочи"</string>
     <string name="next_label" msgid="1248293387735652187">"Даље"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Језици"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Редослед жељених језика"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Језик система"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Уклони"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Додајте језик"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Језик"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Жељени језик"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Језици апликација"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Језици у апликацији"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Подесите језик за сваку апликацију"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Језик апликације"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Језик апликације"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Предложени језици"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Сви језици"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Језик система"</string>
@@ -169,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Избор језика за ову апликацију није доступан из Подешавања."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Језик може да се разликује од језика доступних у апликацији. Неке апликације можда не подржавају ово подешавање."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Овде се приказују само апликације које подржавају избор језика."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Систем, апликације и веб-сајтови користе први подржани језик из жељених језика."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Да бисте изабрали језик за сваку апликацију, идите у подешавања језика апликације."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Сазнајте више о језицима"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Желите ли да уклоните изабране језике?</item>
       <item quantity="few">Желите ли да уклоните изабране језике?</item>
@@ -180,7 +176,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Текст ће бити приказан на неком другом језику."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Није могуће уклонити све језике"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Задржите бар један жељени језик"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Није доступно као језик система"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Можда није доступно у неким апликацијама"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Премести нагоре"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Премести надоле"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Премести на врх"</string>
@@ -1468,6 +1464,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, етернет"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Хотспот, USB, Bluetooth, етернет"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Интернет се не дели са другим уређајима"</string>
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Искључено"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Привезивање"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Немој да користиш Wi‑Fi хотспот"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Дели интернет само преко USB-а"</string>
@@ -4857,6 +4854,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Минимални баланс са потпуно напуњеним уређајем (изузето)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Минимални баланс са потпуно пуним уређајем (системска без графичког интерфејса)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Минимални баланс са потпуно напуњеним уређајем (преостале апликације)"</string>
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Додавање минималног баланса за напуњени уређај (алатке за ажурирање апликација)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Пуњење"</item>
     <item msgid="658627268149681677">"Дремање"</item>
