--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"آن"</string>
     <string name="off" msgid="2898123876644709799">"آف"</string>
     <string name="device_info_default" msgid="1406619232867343310">"نامعلوم"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">اب آپ ایک ڈویلپر بننے سے <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> قدم دور ہیں۔</item>
       <item quantity="one">اب آپ ایک ڈویلپر بننے سے <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> قدم دور ہیں۔</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"نظر انداز کریں"</string>
     <string name="next_label" msgid="1248293387735652187">"اگلا"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"زبانیں"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"ترجیحی زبان کی ترتیب"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"سسٹم کی زبان"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ہٹائیں"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ایک زبان شامل کریں"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"زبان"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ترجیحی زبان"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ایپ کی زبانیں"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ایپ کی زبانیں"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ہر ایپ کے لیے زبان سیٹ کریں"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ایپ کی زبان"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ایپ کی زبان"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"تجویز کردہ زبانیں"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"سبھی زبانیں"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"سسٹم کی زبان"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"اس ایپ کے لیے زبان کا انتخاب ترتیبات سے دستیاب نہیں ہے۔"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"زبان ایپ میں دستیاب زبانوں سے مختلف ہو سکتی ہے۔ ہو سکتا ہے کچھ ایپس اس ترتیب کو سپورٹ نہ کریں۔"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"یہاں صرف ان ایپس کی فہرست دکھائی جاتی ہے جو زبان کے انتخاب کو سپورٹ کرتی ہیں۔"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"آپ کا سسٹم، ایپس اور ویب سائٹس آپ کی ترجیحی زبانوں میں سے پہلی تعاون یافتہ زبان استعمال کرتی ہیں۔"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ہر ایپ کے لیے زبان منتخب کرنے کے لیے، ایپ کی زبان کی ترتیبات پر جائیں۔"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"زبانوں کے بارے میں مزید جانیں"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">منتخب کردہ زبانیں ہٹائیں؟</item>
       <item quantity="one">منتخب کردہ زبان ہٹائیں؟</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"متن ایک دوسری زبان میں ڈسپلے کیا جائے گا۔"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ساری زبانیں نہیں ہٹا سکتا"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"کم از کم ایک ترجیحی زبان رکھیں"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"سسٹم کی زبان کے طور پر دستیاب نہیں ہے"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"ہو سکتا ہے کچھ ایپس میں دستیاب نہ ہو"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"اوپر منتقل کریں"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"نیچے منتقل کریں"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"اوپر منتقل کریں"</string>
@@ -1309,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"‏منتقلی کے دوران <xliff:g id="NAME">^1</xliff:g> کو نہ ہٹائیں۔ ‎\n\n‎اس آلہ پر <xliff:g id="APP">^2</xliff:g> ایپ منتقلی مکمل ہونے تک دستیاب نہیں ہوگی۔"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"آپ اس <xliff:g id="NAME">^1</xliff:g> کا استعمال کیسے کریں گے؟"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"‏داخلی اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"‏صرف اس ٹیبلیٹ پر استعمال کرنے کے لیے ایپس اور میڈیا کو اسٹور کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"‏داخلی اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"‏صرف اس فون پر استعمال کرنے کے لیے ایپس اور میڈیا کو اسٹور کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"یا"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"‏پورٹیبل اسٹوریج کے لئے SD کارڈ کو فارمیٹ کریں"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"‏تصاویر، ویڈیوز، موسیقی وغیرہ کو اسٹور کریں اور دیگر آلات سے ان تک رسائی حاصل کریں۔ &lt;a href=https://support.google.com/android/answer/12153449&gt;SD کارڈ سیٹ اپ کرنے کے بارے میں مزید جانیں&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"فارمیٹ کریں"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"بعد میں سیٹ اپ کریں"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"اس <xliff:g id="NAME">^1</xliff:g> کو فارمیٹ کریں؟"</string>
@@ -1450,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"‏USB، بلوٹوتھ، ایتھرنیٹ"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"‏ہاٹ اسپاٹ، USB، بلوٹوتھ، ایتھرنیٹ"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"دیگر آلات کے ساتھ انٹرنیٹ کا اشتراک نہیں ہو رہا ہے"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ٹیدرنگ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"‏Wi-Fi ہاٹ اسپاٹ کا استعمال نہ کریں"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"‏USB کے ذریعے صرف انٹرٹیٹ کا اشتراک کریں"</string>
@@ -4792,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"کم از کم مطمئن بیلنس (مستثنیٰ)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"کم از کم مطمئن بیلنس (ہیڈ لیس سسٹم ایپ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"کم از کم مطمئن بیلنس (باقی ایپس)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"چارج ہو رہی ہے"</item>
     <item msgid="658627268149681677">"اونگھ"</item>
