--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"অন আছে"</string>
     <string name="off" msgid="2898123876644709799">"অফ আছে"</string>
     <string name="device_info_default" msgid="1406619232867343310">"অজ্ঞাত"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">আপুনি এতিয়া বিকাশকৰ্তা হোৱাৰ পৰা<xliff:g id="STEP_COUNT_1">%1$d</xliff:g> পদক্ষেপ দূৰত।</item>
       <item quantity="other">আপুনি এতিয়া বিকাশকৰ্তা হোৱাৰ পৰা<xliff:g id="STEP_COUNT_1">%1$d</xliff:g> পদক্ষেপ দূৰত।</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"এৰি যাওক"</string>
     <string name="next_label" msgid="1248293387735652187">"পৰৱৰ্তী"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ভাষাবোৰ"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"অগ্ৰাধিকাৰপ্ৰাপ্ত ভাষাৰ ক্ৰম"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"ছিষ্টেমৰ ভাষা"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"আঁতৰাওক"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ভাষা বাছনি কৰক"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ভাষা"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"অগ্ৰাধিকাৰ দিয়া ভাষা"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"এপৰ ভাষাসমূহ"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"এপৰ ভাষা"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"প্ৰতিটো এপৰ বাবে ভাষাটো ছেট কৰক"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"এপৰ ভাষা"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"এপৰ ভাষা"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"পৰামৰ্শ হিচাপে পোৱা ভাষা"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"আটাইবোৰ ভাষা"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ছিষ্টেমৰ ভাষা"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"এই এপ্‌টোৰ বাবে ছেটিঙৰ পৰা ভাষা বাছনি কৰাৰ সুবিধা উপলব্ধ নহয়।"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ভাষাটো এপ্‌টোত উপলব্ধ ভাষাসমূহতকৈ পৃথক হ’ব পাৰে। কিছুমান এপে এই ছেটিংটো সমৰ্থন নকৰিব পাৰে।"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"কেৱল ভাষা বাছনি কৰাৰ সুবিধা থকা এপ্‌সমূহ ইয়াত দেখুওৱা হৈছে।"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"আপোনাৰ ছিষ্টেম, এপ্‌ আৰু ৱেবছাইটসমূহে আপুনি অগ্ৰাধিকাৰ দিয়া ভাষাসমূহৰ পৰা প্ৰথম সমৰ্থিত ভাষাটো ব্যৱহাৰ কৰে।"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"প্ৰতিটো এপৰ বাবে এটা ভাষা বাছনি কৰিবলৈ এপৰ ভাষাৰ ছেটিঙলৈ যাওক।"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ভাষাৰ বিষয়ে অধিক জানক"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">বাছনি কৰা ভাষাসমূহ আঁতৰাবনে?</item>
       <item quantity="other">বাছনি কৰা ভাষাসমূহ আঁতৰাবনে?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"পাঠ অইন এটা ভাষাত দেখুওৱা হ\'ব।"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"আটাইবোৰ ভাষা আঁতৰাব নোৱাৰি"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"কমেও এটা পচন্দৰ ভাষা ৰাখক"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"ছিষ্টেমৰ ভাষা হিচাপে উপলব্ধ নহয়"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"কিছুমান এপত লভ্য নহবও পাৰে"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ওপৰলৈ নিয়ক"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"তললৈ নিয়ক"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ওপৰলৈ নিয়ক"</string>
@@ -1309,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"স্থানান্তৰণ চলি থাকোতে <xliff:g id="NAME">^1</xliff:g> স্থানান্তৰ নকৰিব। \n\n স্থানান্তৰণ সম্পূৰ্ণ নোহোৱালৈকে <xliff:g id="APP">^2</xliff:g> এপটো ডিভাইচত উপলব্ধ নহ’ব।"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"আপুনি এই <xliff:g id="NAME">^1</xliff:g> কেনেদৰে ব্যৱহাৰ কৰিব খোজে?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"অভ্যন্তৰীণ ষ্ট’ৰেজৰ বাবে SD কাৰ্ড ফৰ্মেট কৰক"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"কেৱল এই টেবলেটটোত ব্যৱহাৰ কৰিবলৈ এপ্‌ আৰু মিডিয়া ষ্ট’ৰ কৰক। &lt;a href=https://support.google.com/android/answer/12153449&gt;এখন SD কাৰ্ড ছেট আপ কৰাৰ বিষয়ে অধিক জানক&lt;/a&gt;।"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ফৰ্মেট কৰক"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"অভ্যন্তৰীণ ষ্ট’ৰেজৰ বাবে SD কাৰ্ড ফৰ্মেট কৰক"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"কেৱল এই ফ’নটোত ব্যৱহাৰ কৰিবলৈ এপ্‌ আৰু মিডিয়া ষ্ট’ৰ কৰক। &lt;a href=https://support.google.com/android/answer/12153449&gt;এখন SD কাৰ্ড ছেট আপ কৰাৰ বিষয়ে অধিক জানক&lt;/a&gt;।"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ফৰ্মেট কৰক"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"বা"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"প’ৰ্টেবল ষ্ট’ৰেজৰ বাবে SD কাৰ্ড ফৰ্মেট কৰক"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ফট’, ভিডিঅ’, সংগীত আৰু অধিক ষ্ট’ৰ কৰক আৰু আন ডিভাইচৰ পৰা সেইবোৰ এক্সেছ কৰক। &lt;a href=https://support.google.com/android/answer/12153449&gt;এখন SD কাৰ্ড ছেট আপ কৰাৰ বিষয়ে অধিক জানক&lt;/a&gt;।"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ফৰ্মেট কৰক"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"পিছত ছেট আপ কৰক"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"এই <xliff:g id="NAME">^1</xliff:g>খন ফৰ্মেট কৰিবনে?"</string>
@@ -1450,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"ইউএছবি, ব্লুটুথ, ইথাৰনেট"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"হটস্পট, ইউএছবি, ব্লুটুথ, ইথাৰনেট"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"অন্য ডিভাইচৰ সৈতে ইণ্টাৰনেট শ্বেয়াৰ কৰা হোৱা নাই"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"টিথাৰিং কৰি থকা হৈছে"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ৱাই-ফাই হ\'টস্প\'ট ব্যৱহাৰ নকৰিব"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"কেৱল ইউএছবিৰ জৰিয়তে ইণ্টাৰনেট শ্বেয়াৰ কৰক"</string>
@@ -4792,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (ৰেহাই দিয়া হৈছে)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (কাৰ্যকলাপহীন ছিষ্টেম এপ্)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"বেটাৰী সম্পূৰ্ণ চাৰ্জ হোৱাৰ অৱস্থাত থকা ন্যূনতম বেলেঞ্চ (বাকী থকা এপ্)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"চাৰ্জ হৈ আছে"</item>
     <item msgid="658627268149681677">"ড’জ"</item>
