--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Вкл."</string>
     <string name="off" msgid="2898123876644709799">"Изкл."</string>
     <string name="device_info_default" msgid="1406619232867343310">"Неизвестно"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Вече сте на <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> стъпки от това, да бъдете програмист.</item>
       <item quantity="one">Вече сте на <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> стъпка от това, да бъдете програмист.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Пропускане"</string>
     <string name="next_label" msgid="1248293387735652187">"Напред"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Езици"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ред на предпочитаните езици"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Системен език"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Премахване"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Добавяне на език"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Език"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Предпочитан език"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Езици за приложенията"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Езици за приложенията"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Задаване на език за всяко приложение"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Език за приложенията"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Език на приложението"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Предложени езици"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Всички езици"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Системен език"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Избирането на език за това приложение не е налице от настройките."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Езикът може да се различава от езиците, налични в приложението. Възможно е някои приложения да не поддържат тази настройка."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Тук са показани само приложенията, които поддържат избиране на език."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Системата, приложенията и уебсайтовете използват първия поддържан език от тези, които предпочитате."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"За да изберете език за всяко отделно приложение, отворете съответните настройки."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Научете повече за езиците"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Да се премахнат ли избраните езици?</item>
       <item quantity="one">Да се премахне ли избраният език?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Текстът ще се показва на друг език."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Не могат да се премахнат всички езици"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Запазете поне един предпочитан език"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Не е налице като системен език"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Може да не е налице в някои приложения"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Преместване нагоре"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Преместване надолу"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Преместване най-горе"</string>
@@ -1315,17 +1312,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Не премахвайте хранилището (<xliff:g id="NAME">^1</xliff:g>) по време на преместването. \n\nПриложението <xliff:g id="APP">^2</xliff:g> няма да е налице на това устройство, докато процесът не завърши."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Как ще ползвате хранилището (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Форматиране на SD картата като вътрешно хранилище"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Съхранявайте приложения и мултимедия за ползване само на този таблет. &lt;a href=https://support.google.com/android/answer/12153449&gt;Научете повече за настройването на SD карта&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматиране"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Форматиране на SD картата като вътрешно хранилище"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Съхранявайте приложения и мултимедия за ползване само на този телефон. &lt;a href=https://support.google.com/android/answer/12153449&gt;Научете повече за настройването на SD карта&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматиране"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Или"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Форматиране на SD картата като преносимо хранилище"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Съхранявайте снимки, видеоклипове, музика и др. и осъществявайте достъп до тях от други устройства. &lt;a href=https://support.google.com/android/answer/12153449&gt;Научете повече за настройването на SD карта&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматиране"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Настройване по-късно"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Да се форматира ли хранилището (<xliff:g id="NAME">^1</xliff:g>)?"</string>
@@ -1456,6 +1450,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Точка за достъп, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Връзката с интернет не се споделя с други устройства"</string>
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Изкл."</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Тетъринг"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Без използване на точка за достъп до Wi-Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Споделете достъпа до интернет само през USB"</string>
@@ -4798,6 +4793,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Минимален баланс при заредена батерия (изключени приложения)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Минимален баланс при заредена батерия (системно приложение без графичен ПИ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Минимален баланс при заредена батерия (оставащи приложения)"</string>
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Допълнение към мин. баланс при заредена батерия (програми за акт. на прил.)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Зареждане"</item>
     <item msgid="658627268149681677">"Режим на дрямка"</item>
