--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"চালু আছে"</string>
     <string name="off" msgid="2898123876644709799">"বন্ধ আছে"</string>
     <string name="device_info_default" msgid="1406619232867343310">"অজানা"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"তথ্য দেখতে ট্যাপ করুন"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">একজন ডেভেলপার হওয়া থেকে আপনি এখন <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> পদক্ষেপ দূরে রয়েছেন৷</item>
       <item quantity="other">একজন ডেভেলপার হওয়া থেকে আপনি এখন <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> পদক্ষেপ দূরে রয়েছেন৷</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"এড়িয়ে যান"</string>
     <string name="next_label" msgid="1248293387735652187">"পরবর্তী"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ভাষা"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"পছন্দের ভাষার ক্রম"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"সিস্টেমের ভাষা"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"সরান"</string>
     <string name="add_a_language" msgid="2126220398077503271">"একটি ভাষা যোগ করুন"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ভাষা"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"পছন্দসই ভাষা"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"অ্যাপের ভাষা"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"অ্যাপ ভাষা"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"প্রতিটি অ্যাপের জন্য ভাষা সেট করুন"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"অ্যাপের ভাষা"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"অ্যাপ ভাষা"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"সাজেস্ট করা ভাষা"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"সব ভাষা"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"সিস্টেমের ভাষা"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"এই অ্যাপের জন্য \'সেটিংস\' থেকে ভাষা বেছে নেওয়ার সুবিধা উপলভ্য নেই।"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"অ্যাপে উপলভ্য থাকা ভাষা আলাদা হতে পারে। কিছু অ্যাপে এই সেটিং কাজ নাও করতে পারে।"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"শুধুমাত্র সেইসব অ্যাপ দেখানো হয়েছে যার মধ্যে ভাষা বেছে নেওয়ার বিকল্প আছে।"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"আপনার বেছে নেওয়া পছন্দের ভাষা থেকে কাজ করবে এমন প্রথম ভাষাটি, সিস্টেম, অ্যাপ ও ওয়েবসাইট ব্যবহার করে।"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"প্রতিটি অ্যাপের জন্য ভাষা বেছে নিতে, অ্যাপের ভাষা সংক্রান্ত সেটিংসে যান।"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ভাষা সম্পর্কে আরও জানুন"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">নির্বাচিত ভাষা সরাবেন?</item>
       <item quantity="other">নির্বাচিত ভাষা সরাবেন?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"পাঠ্য অন্য ভাষায় প্রদর্শিত হবে৷"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"সমস্ত ভাষা সরানো যাবে না"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"অন্তত পক্ষে একটি পছন্দের ভাষা রাখুন"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"সিস্টেমের ভাষা হিসেবে উপলভ্য নয়"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"কিছু অ্যাপ্লিকেশানের মধ্যে নাও উপলব্ধ হতে পারে"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"উপরে সরান"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"নিচে সরান"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"শীর্ষে সরান"</string>
@@ -1309,17 +1305,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"সরানোর সময় <xliff:g id="NAME">^1</xliff:g>টি অপসারণ করবেন না৷ \n\nএই ডিভাইসের <xliff:g id="APP">^2</xliff:g> অ্যাপ্লিকেশানটি সরানো সম্পূর্ণ না হওয়া পর্যন্ত উপলব্ধ নাও হতে পারে৷"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"আপনি এই <xliff:g id="NAME">^1</xliff:g> কীভাবে ব্যবহার করবেন?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ইন্টার্নাল স্টোরেজের জন্য এসডি কার্ড ফর্ম্যাট করা"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"শুধুমাত্র এই ট্যাবলেটে ব্যবহার করতে অ্যাপ &amp; মিডিয়া সেভ করুন। &lt;a href=https://support.google.com/android/answer/12153449&gt;এসডি কার্ড সেট-আপ করা সম্পর্কে আরও জানুন&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ফর্ম্যাট করুন"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ইন্টার্নাল স্টোরেজের জন্য এসডি কার্ড ফর্ম্যাট করা"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"শুধুমাত্র এই ফোনে ব্যবহার করতে অ্যাপ &amp; মিডিয়া সেভ করুন। &lt;a href=https://support.google.com/android/answer/12153449&gt;এসডি কার্ড সেট-আপ করা সম্পর্কে আরও জানুন&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ফর্ম্যাট করুন"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"অথবা"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"পোর্টেবল স্টোরেজের জন্য এসডি কার্ড ফরম্যাট করা"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"ফটো, ভিডিও, মিউজিক ও আরও অনেক কিছু সেভ করুন এবং অন্য ডিভাইস থেকে সেগুলি অ্যাক্সেস করুন। &lt;a href=https://support.google.com/android/answer/12153449&gt;এসডি কার্ড সেট-আপ করা সম্পর্কে আরও জানুন&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ফর্ম্যাট করুন"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"পরে সেট-আপ করুন"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"<xliff:g id="NAME">^1</xliff:g> ফরম্যাট করবেন?"</string>
@@ -1450,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"ইউএসবি, ব্লুটুথ, ইথারনেট"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"হটস্পট, ইউএসবি, ব্লুটুথ, ইথারনেট"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"অন্যান্য ডিভাইসের সাথে ইন্টারনেট শেয়ার করা হচ্ছে না"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"টিথারিং"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ওয়াই-ফাই হটস্পট ব্যবহার করবেন না"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"শুধুমাত্র ইউএসবির মাধ্যমে ইন্টারনেট শেয়ার করুন"</string>
@@ -4792,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ন্যূনতম সেশিয়েটেড ব্যালেন্স (ছাড় দেওয়া হয়েছে)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ন্যূনতম সেশিয়েটেড ব্যালেন্স (হেডলেস সিস্টেম অ্যাপ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ন্যূনতম সেশিয়েটেড ব্যালেন্স (বাকি অ্যাপ)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"চার্জ হচ্ছে"</item>
     <item msgid="658627268149681677">"ব্যাটারি \'ডজ\' অবস্থায় আছে"</item>
