--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Til"</string>
     <string name="off" msgid="2898123876644709799">"Fra"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Ukendt"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Tryk for at vise oplysninger"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Du er nu <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> skridt fra at være udvikler.</item>
       <item quantity="other">Du er nu <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> skridt fra at være udvikler.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Spring over"</string>
     <string name="next_label" msgid="1248293387735652187">"Næste"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Sprog"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Rækkefølgen af foretrukne sprog"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Systemsprog"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Fjern"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Tilføj et sprog"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Sprog"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Foretrukket sprog"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Appsprog"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Appsprog"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Angiv sprog for hver app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Appsprog"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Appsprog"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Foreslåede sprog"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alle sprog"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Systemsprog"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Sprogvalg for denne app er ikke tilgængeligt i Indstillinger."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Sproget kan adskille sig fra sprogene i appen. Nogle apps understøtter muligvis ikke denne indstilling."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Her vises kun apps, der understøtter sprogvalg."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Dit system, dine apps og dine websites anvender det første understøttede sprog fra dine foretrukne sprog."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Hvis du vil vælge et sprog for hver app, skal du gå til den pågældende apps sprogindstillinger."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Få flere oplysninger om sprog"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Vil du fjerne det valgte sprog?</item>
       <item quantity="other">Vil du fjerne de valgte sprog?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Al tekst vises på et andet sprog."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Du kan ikke fjerne alle sprog."</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Behold mindst ét foretrukket sprog"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ikke tilgængeligt som systemsprog"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Det er muligvis ikke tilgængeligt i alle apps"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Flyt op"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Flyt ned"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Flyt til toppen"</string>
@@ -1309,17 +1305,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Fjern ikke dit <xliff:g id="NAME">^1</xliff:g> under flytningen. \n\nAppen <xliff:g id="APP">^2</xliff:g> på denne enhed vil ikke være tilgængelig, før flytningen er gennemført."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Hvordan vil du bruge dette <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatér SD-kort til intern lagerplads"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Gem apps og medier, som kun skal bruges på denne tablet. &lt;a href=https://support.google.com/android/answer/12153449&gt;Se, hvordan du konfigurerer et SD-kort&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatér"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatér SD-kort til intern lagerplads"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Gem apps og medier, som kun skal bruges på denne telefon. &lt;a href=https://support.google.com/android/answer/12153449&gt;Se, hvordan du konfigurerer et SD-kort&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatér"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Eller"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatér SD-kort til flytbar lagerplads"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Gem billeder, videoer, musik m.m., og få adgang til indholdet fra andre enheder. &lt;a href=https://support.google.com/android/answer/12153449&gt;Se, hvordan du konfigurerer et SD-kort&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatér"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Konfigurer senere"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vil du formatere dette <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1450,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Deler ikke internet med andre enheder"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Netdeling"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Brug ikke Wi-Fi-hotspot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Del kun internet via USB"</string>
@@ -4792,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimumssaldo for fuld opladning (undtagelse)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimumssaldo for fuld opladning (systemapp uden grafisk brugerflade)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimumssaldo for fuld opladning (øvrige apps)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Opladning"</item>
     <item msgid="658627268149681677">"Hvil"</item>
