--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"An"</string>
     <string name="off" msgid="2898123876644709799">"Aus"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Unbekannt"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Für Informationen tippen"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">In <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> Schritten bist du Entwickler.</item>
       <item quantity="one">In <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> Schritt bist du Entwickler.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Überspringen"</string>
     <string name="next_label" msgid="1248293387735652187">"Weiter"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Sprachen"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Reihenfolge der bevorzugten Sprachen"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Systemsprache"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Entfernen"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Sprache hinzufügen"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Sprache"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Bevorzugte Sprache"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"App-Sprachen"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"App-Sprachen"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Sprache für einzelne Apps festlegen"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"App-Sprache"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"App-Sprache"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Vorgeschlagene Sprachen"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alle Sprachen"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Systemsprache"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Für diese App ist in den Einstellungen keine Sprachauswahl verfügbar."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Die Sprache kann von den in der App verfügbaren Sprachen abweichen. Einige Apps unterstützen diese Einstellung möglicherweise nicht."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hier werden nur Apps angezeigt, die die Sprachauswahl unterstützen."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Dein System, deine Apps und deine Websites verwenden die erste deiner bevorzugten Sprachen, die unterstützt wird."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Unter „App-Sprache“ kannst du für jede App eine Sprache auswählen."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Weitere Informationen zu Sprachen"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Ausgewählte Sprachen entfernen?</item>
       <item quantity="one">Ausgewählte Sprache entfernen?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Text wird in einer anderen Sprache angezeigt."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Du kannst nicht alle Sprachen entfernen"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Behalte mindestens eine bevorzugte Sprache"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Als Systemsprache nicht verfügbar"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Unter Umständen in manchen Apps nicht verfügbar"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Nach oben"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Nach unten"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Ganz nach oben"</string>
@@ -1453,6 +1449,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internetverbindung wird nicht für andere Geräte freigegeben"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Tethering"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"WLAN-Hotspot nicht verwenden"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Internet nur über USB freigeben"</string>
@@ -4795,6 +4793,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Mindestsaldo bei vollem Akku (vom Energiesparen ausgenommene Apps)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Mindestsaldo bei vollem Akku (System-App ohne Benutzeroberfläche)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Mindestsaldo bei vollem Akku (restliche Apps)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Laden"</item>
     <item msgid="658627268149681677">"Stromsparmodus"</item>
