--- a/res/values-en-rCA/strings.xml
+++ b/res/values-en-rCA/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"On"</string>
     <string name="off" msgid="2898123876644709799">"Off"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Unknown"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Tap to show info"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">You are now <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> steps away from being a developer.</item>
       <item quantity="one">You are now <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> step away from being a developer.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Skip"</string>
     <string name="next_label" msgid="1248293387735652187">"Next"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Languages"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Preferred language order"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"System language"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Remove"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Add a language"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Language"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Preferred language"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"App languages"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"App languages"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Set the language for each app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"App language"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"App language"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Suggested languages"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"All languages"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"System language"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Language selection for this app isn’t available from Settings."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Language may differ from languages available in the app. Some apps may not support this setting."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Only apps that support language selection are shown here."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Your system, apps and websites use the first supported language from your preferred languages."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"To select a language for each app, go to app language settings."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Learn more about languages"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Remove selected languages?</item>
       <item quantity="one">Remove selected language?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Text will be displayed in another language."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Can’t remove all languages"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Keep at least one preferred language"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Not available as system language"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"May not be available in some apps"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Move up"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Move down"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Move to top"</string>
@@ -1447,6 +1443,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Not sharing Internet with other devices"</string>
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Off"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Tethering"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Don’t use Wi‑Fi hotspot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Only share Internet via USB"</string>
@@ -4789,6 +4786,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimum satiated balance (exempted)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimum satiated balance (headless system app)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimum satiated balance (remaining apps)"</string>
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Minimum satiated balance addition (app updaters)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Charging"</item>
     <item msgid="658627268149681677">"Doze"</item>
