--- a/res/values-eu/strings.xml
+++ b/res/values-eu/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Aktibatuta"</string>
     <string name="off" msgid="2898123876644709799">"Desaktibatuta"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Ezezaguna"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other"><xliff:g id="STEP_COUNT_1">%1$d</xliff:g> urrats falta zaizkizu garatzaile izateko.</item>
       <item quantity="one"><xliff:g id="STEP_COUNT_0">%1$d</xliff:g> urrats falta zaizu garatzaile izateko.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Saltatu"</string>
     <string name="next_label" msgid="1248293387735652187">"Hurrengoa"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Hizkuntzak"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Hizkuntza hobetsien ordena"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Sistemaren hizkuntza"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Kendu"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Gehitu hizkuntza bat"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Hizkuntza"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Hizkuntza hobetsia"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Aplikazioen hizkuntzak"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Aplikazioen hizkuntzak"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Ezarri aplikazio bakoitzerako hizkuntza"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Aplikazioaren hizkuntza"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Aplikazioaren hizkuntza"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Iradokitako hizkuntzak"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Hizkuntza guztiak"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Sistemaren hizkuntza"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Aplikazioaren hizkuntza hautatzeko aukera ez dago erabilgarri ezarpenetan."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Baliteke hizkuntza ez egotea aplikazioan erabilgarri, eta aplikazio batzuk ezarpenarekin bateragarriak ez izatea."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hizkuntza hautatzeko aukera duten aplikazioak soilik agertzen dira hemen."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistemak, aplikazioek eta webguneek hizkuntza hobetsien zerrendako lehen hizkuntza bateragarria erabiltzen dute."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Aplikazio bakoitzerako hizkuntza bat hautatzeko, joan aplikazioaren hizkuntza-ezarpenetara."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Lortu hizkuntzei buruzko informazio gehiago"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Hautatutako hizkuntzak kendu nahi dituzu?</item>
       <item quantity="one">Hautatutako hizkuntza kendu nahi duzu?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Testua beste hizkuntza batean bistaratuko da."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Ezin dira kendu hizkuntza guztiak"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Mantendu gutxienez gogoko hizkuntza bat"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ez dago erabilgarri sistemaren hizkuntza gisa"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Baliteke aplikazio batzuetan erabilgarri ez egotea"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Eraman gora"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Eraman behera"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Eraman goraino"</string>
@@ -1447,6 +1444,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth eta Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Wifi-gunea, USB, Bluetooth eta Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Ez zara partekatzen ari Interneteko konexiorik beste gailuekin"</string>
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"Desaktibatuta"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"Konexioa partekatzea"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Ez erabili wifi-gunerik"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Partekatu Interneteko konexioa USB bidez"</string>
@@ -4789,6 +4787,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Gutxieneko saldoa bateria guztiz kargatuta dagoenean (salbuetsita)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Gutxieneko saldoa bateria guztiz kargatuta dagoenean (erabiltzaileak erabili ezin duen sistema-aplikazioa)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Gutxieneko saldoa bateria guztiz kargatuta dagoenean (gainerako aplikazioak)"</string>
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"Gutxieneko saldoa bateria guztiz kargatuta dagoenean (aplikazio-eguneratzaileak)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Kargatzen"</item>
     <item msgid="658627268149681677">"Kuluxka"</item>
