--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Päällä"</string>
     <string name="off" msgid="2898123876644709799">"Pois päältä"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Tuntematon"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Enää <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> vaihetta, niin sinusta tulee kehittäjä.</item>
       <item quantity="one">Enää <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> vaihe, niin sinusta tulee kehittäjä.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Ohita"</string>
     <string name="next_label" msgid="1248293387735652187">"Seuraava"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Kielet"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Ensisijaisten kielten järjestys"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Järjestelmän kieli"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Poista"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Lisää kieli"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Kieli"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Ensisijainen kieli"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Sovellusten kielet"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Sovellusten kielet"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Valitse kieli kullekin sovellukselle"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Sovelluksen kieli"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Sovelluksen kieli"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Kieliehdotukset"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Kaikki kielet"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Järjestelmän kieli"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Sovellukselle ei voi valita kieltä asetuksista."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Kieli saattaa erota sovelluksessa saatavilla olevista kielistä. Jotkin sovellukset eivät ehkä tue tätä asetusta."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Täällä näkyvät vain sovellukset, jotka tukevat kielen valitsemista."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Järjestelmä, sovellukset ja verkkosivustot käyttävät valitsemistasi kielistä ensimmäistä, jota tuetaan."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Voit valita kielen kullekin sovellukselle sen kieliasetuksista."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Lue lisää kielistä"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Poistetaanko valitut kielet?</item>
       <item quantity="one">Poistetaanko valittu kieli?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teksti näytetään toisella kielellä."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Kaikkia kieliä ei voi poistaa"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Jätä ainakin yksi ensisijainen kieli"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ei saatavilla järjestelmän kieleksi"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Ei ehkä ole saatavilla kaikissa sovelluksissa"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Siirrä ylöspäin"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Siirrä alaspäin"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Siirrä ylimmäksi"</string>
@@ -1309,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Jätä <xliff:g id="NAME">^1</xliff:g> paikalleen siirron ajaksi. \n\nTämän laitteen <xliff:g id="APP">^2</xliff:g>-sovellus ei ole käytettävissä, ennen kuin siirto on valmis."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Miten <xliff:g id="NAME">^1</xliff:g> otetaan käyttöön?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Alusta SD-kortti sisäiseksi tallennustilaksi"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Tallenna sovelluksia ja mediaa vain tämän tabletin käyttöön. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Alusta"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Alusta SD-kortti sisäiseksi tallennustilaksi"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Tallenna sovelluksia ja mediaa vain tämän puhelimen käyttöön. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Alusta"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"tai"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Alusta SD-kortti siirrettäväksi tallennustilaksi"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Tallenna esimerkiksi musiikkia ja videoita ja käytä niitä muilla laitteilla. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lue lisää SD-kortin käyttöönotosta&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Alusta"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Määritä myöhemmin"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Alustetaanko tämä <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1450,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internetyhteyttä ei jaeta muille laitteille."</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Puhelimen käyttäminen modeemina"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Älä käytä Wi-Fi-hotspotia"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Jaa verkkoyhteys vain USB:n kautta"</string>
@@ -4792,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Vähimmäissaldo, kun laite on ladattu (Vapautettu)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Enimmäissaldo, kun laite on ladattu (Järjestelmäsovellus ilman UI-grafiikkaa)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Vähimmäissaldo, kun laite on ladattu (Jäljellä olevat sovellukset)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Ladataan"</item>
     <item msgid="658627268149681677">"Unitila"</item>
