--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Be"</string>
     <string name="off" msgid="2898123876644709799">"Ki"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Ismeretlen"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Koppintson az információk megjelenítéséhez"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other"><xliff:g id="STEP_COUNT_1">%1$d</xliff:g> lépésre van attól, hogy fejlesztő legyen.</item>
       <item quantity="one"><xliff:g id="STEP_COUNT_0">%1$d</xliff:g> lépésre van attól, hogy fejlesztő legyen.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Kihagyás"</string>
     <string name="next_label" msgid="1248293387735652187">"Tovább"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Nyelvek"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"A preferált nyelvek sorrendje"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Alapértelmezett nyelv"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Eltávolítás"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Nyelv hozzáadása"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Nyelv"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Előnyben részesített nyelv"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Az alkalmazások nyelve"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Az alkalmazás nyelvei"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Az egyes alkalmazások nyelvének beállítása"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Az alkalmazás nyelve"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Az alkalmazás nyelve"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Javasolt nyelvek"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Minden nyelv"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Alapértelmezett nyelv"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"A Nyelvválasztás nem áll rendelkezésre ehhez az alkalmazáshoz a Beállításokban."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"A nyelv eltérhet az alkalmazásban rendelkezésre álló nyelvektől. Előfordulhat, hogy egyes alkalmazások nem támogatják ezt a beállítást."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Csak azok az alkalmazások láthatók itt, amelyek támogatják a nyelvválasztást."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"A rendszer, az alkalmazások és a webhelyek a preferált nyelvek közül az első támogatottat fogják használni."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ha minden alkalmazásnál Ön szeretné kiválasztani a nyelvet, lépjen az egyes alkalmazások nyelvi beállításaihoz."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"További információ a nyelvekről"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Eltávolítja a kiválasztott nyelveket?</item>
       <item quantity="one">Eltávolítja a kiválasztott nyelvet?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"A szöveg más nyelven fog megjelenni."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nem lehet eltávolítani az összes nyelvet"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Legalább egy előnyben részesített nyelvet tartson meg"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nem áll rendelkezésre alapértelmezett nyelvként"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Lehet, hogy egyes alkalmazásokban nem áll majd rendelkezésre"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Mozgatás felfelé"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Mozgatás lefelé"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Mozgatás az elejére"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Nincs internetmegosztás más eszközökkel"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Internetmegosztás"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Ne használjon Wi‑Fi-hotspotot"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Internetmegosztás csak USB-n keresztül"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimális telítettségi egyenleg (mentesítve)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimális telítettségi egyenleg (Headless rendszerű alkalmazás)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimális telítettségi egyenleg (többi alkalmazás)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Töltés"</item>
     <item msgid="658627268149681677">"Kímélés"</item>
