--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Միացված է"</string>
     <string name="off" msgid="2898123876644709799">"Անջատված է"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Անհայտ"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Հպեք՝ տեղեկություններ ցուցադրելու համար"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Եվս <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> քայլ, և դուք ծրագրավորող եք:</item>
       <item quantity="other">Եվս <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> քայլ, և դուք ծրագրավորող եք:</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Բաց թողնել"</string>
     <string name="next_label" msgid="1248293387735652187">"Հաջորդը"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Լեզուներ"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Նախընտրած լեզուների հերթականություն"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Համակարգի լեզու"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Հեռացնել"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Ավելացնել լեզու"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Լեզու"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Նախընտրած լեզուն"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Հավելվածների լեզուներ"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Հավելվածների լեզուները"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Լեզու ընտրեք յուրաքանչյուր հավելվածի համար"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Հավելվածի լեզու"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Հավելվածի լեզուն"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Առաջարկվող լեզուներ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Բոլոր լեզուները"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Համակարգի լեզու"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Լեզվի ընտրությունն այս հավելվածի համար հասանելի չէ Կարգավորումներում։"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Լեզուն կարող է հավելվածում հասանելի լեզուների ցանկում չլինել։ Որոշ հավելվածներ կարող են չաջակցել այս կարգավորումը։"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Այստեղ ցուցադրված են միայն այն հավելվածները, որոնցում աջակցվում է լեզվի ընտրությունը։"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Ձեր համակարգը, հավելվածները և կայքերն օգտագործում են ձեր նախընտրած լեզուներից առաջին աջակցվող լեզուն։"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Անցեք հավելվածի լեզուների կարգավորումներ՝ ընտրելու լեզու յուրաքանչյուր հավելվածի համար։"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Իմացեք ավելին լեզուների մասին"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Հեռացնե՞լ ընտրված լեզուն</item>
       <item quantity="other">Հեռացնե՞լ ընտրված լեզուները</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Տեքստը կցուցադրվի մեկ այլ լեզվով:"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Հնարավոր չէ հեռացնել բոլոր լեզուները"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Թողեք առնվազն մեկ նախընտրած լեզու"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Հասանելի չէ որպես համակարգի լեզու"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Հնարավոր է՝ որոշ հավելվածներում այն հասանելի չլինի"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Տեղափոխել վերև"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Տեղափոխել ներքև"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Տանել ցանկի սկիզբ"</string>
@@ -1096,8 +1092,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Լրիվ լուծաչափը մարտկոցի լիցքն ավելի շատ է սպառում։ Այս լուծաչափին անցնելու դեպքում որոշ հավելվածներ կարող են վերագործարկվել։"</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Ընտրված է"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Գույներ"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Բնական"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Պայծառ"</string>
@@ -1310,17 +1305,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Տեղափոխման ընթացքում չհեռացնեք <xliff:g id="NAME">^1</xliff:g>-ը: \n\n<xliff:g id="APP">^2</xliff:g> հավելվածը հասանելի չի լինի մինչև տեղափոխումը չավարտվի:"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Ինչպե՞ս եք օգտագործելու <xliff:g id="NAME">^1</xliff:g> հիշասարքը"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Ֆորմատավորել SD քարտը որպես ներքին հիշողություն"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Պահել հավելվածներ և մեդիաֆայլեր՝ միայն այս պլանշետում օգտագործելու համար։ &lt;a href=https://support.google.com/android/answer/12153449&gt;Իմանալ ավելին SD քարտերի կարգավորման մասին&lt;/a&gt;։"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Ֆորմատավորել"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Ֆորմատավորել SD քարտը որպես ներքին հիշողություն"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Պահել հավելվածներ և մեդիաֆայլեր՝ միայն այս հեռախոսում օգտագործելու համար։ &lt;a href=https://support.google.com/android/answer/12153449&gt;Իմանալ ավելին SD քարտերի կարգավորման մասին&lt;/a&gt;։"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Ֆորմատավորել"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Կամ"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Ֆորմատավորել SD քարտը որպես շարժական կրիչ"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Պահել լուսանկարներ, տեսանյութեր, երգեր և այլ բովանդակություն՝ այլ սարքերում օգտագործելու համար։ &lt;a href=https://support.google.com/android/answer/12153449&gt;Իմանալ ավելին SD քարտերի կարգավորման մասին&lt;/a&gt;։"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Ֆորմատավորել"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Կարգավորել ավելի ուշ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Ֆորմատավորե՞լ այս <xliff:g id="NAME">^1</xliff:g>ը"</string>
@@ -1451,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Թեժ կետ, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Ինտերնետը հասանելի չէ այլ սարքերի"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Մոդեմի ռեժիմ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Չօգտագործել Wi‑Fi թեժ կետը"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Ինտերնետը տարածել միայն USB-ի միջոցով"</string>
@@ -4793,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Նվազագույն մնացորդը լրիվ լիցքի դեպքում (բացառված հավելվածներ)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Նվազագույն մնացորդը լրիվ լիցքի դեպքում (առանց միջերեսի համակարգային հավելվածներ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Նվազագույն մնացորդը լրիվ լիցքի դեպքում (մնացած հավելվածներ)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Լիցքավորում"</item>
     <item msgid="658627268149681677">"Նինջ"</item>
