--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Aktif"</string>
     <string name="off" msgid="2898123876644709799">"Nonaktif"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Tidak diketahui"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Tinggal <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> langkah untuk menjadi developer.</item>
       <item quantity="one">Tinggal <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> langkah untuk menjadi developer.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Lewati"</string>
     <string name="next_label" msgid="1248293387735652187">"Berikutnya"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Bahasa"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Urutan bahasa pilihan"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Bahasa sistem"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Hapus"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Tambahkan bahasa"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Bahasa"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Bahasa pilihan"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Bahasa aplikasi"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Bahasa aplikasi"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Setel bahasa untuk setiap aplikasi"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Bahasa aplikasi"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Bahasa Aplikasi"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Bahasa yang disarankan"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Semua bahasa"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Bahasa sistem"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Pemilihan bahasa untuk aplikasi ini tidak tersedia dari Setelan."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Bahasa mungkin berbeda dari bahasa yang tersedia di aplikasi. Beberapa aplikasi mungkin tidak mendukung setelan ini."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hanya aplikasi yang mendukung pilihan bahasa yang ditampilkan di sini."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistem, aplikasi, dan situs menggunakan bahasa pertama yang didukung dari bahasa pilihan Anda."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Untuk memilih bahasa bagi setiap aplikasi, buka setelan bahasa aplikasi."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Pelajari bahasa lebih lanjut"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Hapus bahasa yang dipilih?</item>
       <item quantity="one">Hapus bahasa yang dipilih?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teks akan ditampilkan dalam bahasa lain."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Tidak dapat menghapus semua bahasa"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Simpan sedikitnya satu bahasa pilihan"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Tidak tersedia sebagai bahasa sistem"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Mungkin tidak tersedia di beberapa aplikasi"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Naikkan"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Turunkan"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Pindahkan ke atas"</string>
@@ -1096,8 +1093,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Resolusi penuh menggunakan lebih banyak daya baterai. Mengganti resolusi dapat menyebabkan beberapa aplikasi dimulai ulang."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Dipilih"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Warna"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Alami"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Dipertajam"</string>
@@ -1310,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Jangan cabut <xliff:g id="NAME">^1</xliff:g> selama pemindahan. \n\nAplikasi <xliff:g id="APP">^2</xliff:g> di perangkat ini baru dapat tersedia jika pemindahan selesai."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Bagaimana Anda menggunakan <xliff:g id="NAME">^1</xliff:g> ini?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Format kartu SD untuk penyimpanan internal"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Simpan aplikasi &amp; media hanya untuk digunakan di tablet ini. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pelajari lebih lanjut cara menyiapkan kartu SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Format"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Format kartu SD untuk penyimpanan internal"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Simpan aplikasi &amp; media hanya untuk digunakan di ponsel ini. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pelajari lebih lanjut cara menyiapkan kartu SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Format"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Atau"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Format kartu SD untuk penyimpanan portabel"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Simpan foto, video, musik, dan lainnya serta akses file dari perangkat lain. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pelajari lebih lanjut cara menyiapkan kartu SD&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Format"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Siapkan nanti"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Format <xliff:g id="NAME">^1</xliff:g> ini?"</string>
@@ -1451,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Tidak berbagi internet dengan perangkat lain"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Tethering"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Jangan gunakan hotspot Wi-Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Bagikan internet hanya melalui USB"</string>
@@ -4793,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Saldo Minimum saat Penuh (Dikecualikan)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Saldo Minimum saat Penuh (Aplikasi Sistem Headless)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Saldo Minimum saat Penuh (Aplikasi yang Tersisa)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Mengisi daya"</item>
     <item msgid="658627268149681677">"Istirahatkan"</item>
