--- a/res/values-is/strings.xml
+++ b/res/values-is/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Kveikt"</string>
     <string name="off" msgid="2898123876644709799">"Slökkt"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Óþekkt"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Nú ertu <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> skrefi frá því að gerast þróunaraðili.</item>
       <item quantity="other">Nú ertu <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> skrefum frá því að gerast þróunaraðili.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Sleppa"</string>
     <string name="next_label" msgid="1248293387735652187">"Áfram"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Tungumál"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Röð kjörtungumála"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Tungumál kerfis"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Fjarlægja"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Bæta við tungumáli"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Tungumál"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Kjörtungumál"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Tungumál forrita"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Tungumál forrits"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Velja tungumál fyrir hvert forrit"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Tungumál forrits"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Tungumál forrits"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Tillögur að tungumálum"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Öll tungumál"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Tungumál kerfis"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Ekki er hægt að velja tungumál fyrir þetta forrit í stillingum."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Tungumál kann að vera frábrugðið tiltækum tungumálum í forritinu. Tiltekin forrit styðja hugsanlega ekki þessa stillingu."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hér eru aðeins birt forrit sem styðja val á tungumáli."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Kerfi, forrit og vefsvæði nota fyrsta studda tungumálið af lista kjörtungumála."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Til að velja tungumál fyrir hvert forrit skaltu fara í tungumálastillingar forrita."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Nánar um tungumál"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Fjarlægja valin tungumál?</item>
       <item quantity="other">Fjarlægja valin tungumál?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Texti mun birtast á öðru tungumáli."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Ekki er hægt að fjarlægja öll tungumál"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Halda að minnsta kosti einu völdu tungumáli"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ekki í boði sem kerfistungumál"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Hugsanlega ekki í boði í sumum forritum"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Færa upp"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Færa niður"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Flytja alla leið upp"</string>
@@ -1309,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Ekki fjarlægja <xliff:g id="NAME">^1</xliff:g> á meðan flutningur stendur yfir. \n\n<xliff:g id="APP">^2</xliff:g> forritið í þessu tæki verður ekki aðgengilegt fyrr en að flutningi loknum."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Hvernig viltu að nota þetta <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Sníða SD-kort fyrir innbyggða geymslu"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Vista forrit og efni til að nota eingöngu í þessari spjaldtölvu. &lt;a href=https://support.google.com/android/answer/12153449&gt;Kynntu þér uppsetningu SD-korts&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Sníða"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Sníða SD-kort fyrir innbyggða geymslu"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Vista forrit og efni til að nota eingöngu í þessum síma. &lt;a href=https://support.google.com/android/answer/12153449&gt;Kynntu þér uppsetningu SD-korts&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Sníða"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Eða"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Sníða SD-kort fyrir færanlega geymslu"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Vista myndir, myndskeið, tónlist og fleira og nálgast efnið í öðrum tækjum. &lt;a href=https://support.google.com/android/answer/12153449&gt;Kynntu þér uppsetningu SD-korts&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Sníða"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Setja upp síðar"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Forsníða þetta <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1450,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Heitur reitur, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Nettengingu er ekki deilt með öðrum tækjum"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Tjóðrun"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Ekki nota heitan Wi-Fi reit"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Deila interneti aðeins gegnum USB"</string>
@@ -4792,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Lágmarksstaða við fulla hleðslu (undanþegin)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Lágmarksstaða við fulla hleðslu (kerfisforrit án notendaviðmóts)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Lágmarksstaða við fulla hleðslu (önnur forrit)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Í hleðslu"</item>
     <item msgid="658627268149681677">"Blunda"</item>
