--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"הפעלה"</string>
     <string name="off" msgid="2898123876644709799">"השבתה"</string>
     <string name="device_info_default" msgid="1406619232867343310">"לא ידוע"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="two">נותרו לך עוד  <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> שלבים כדי להיות מפתח.</item>
       <item quantity="many">נותרו לך עוד <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> שלבים כדי להיות מפתח.</item>
@@ -154,15 +156,13 @@
     <string name="skip_label" msgid="6380034601349015895">"דילוג"</string>
     <string name="next_label" msgid="1248293387735652187">"הבא"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"שפות"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"סדר השפות המועדפות"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"שפת המערכת"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"הסרה"</string>
     <string name="add_a_language" msgid="2126220398077503271">"הוספת שפה"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"שפה"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"השפה המועדפת"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"שפות של אפליקציות"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"שפות של אפליקציות"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"הגדרת השפה של כל אפליקציה"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"שפת האפליקציה"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"שפת האפליקציה"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"השפות המוצעות"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"כל השפות"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"שפת המערכת"</string>
@@ -170,9 +170,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"בחירות השפה לאפליקציה הזו לא זמינה בהגדרות."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"השפה עשויה להיות שונה מהשפות הזמינות באפליקציה. יכול להיות שחלק מהאפליקציות לא תומכות בהגדרה הזו."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"מוצגות כאן רק אפליקציות התומכות בבחירת שפה."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"המערכת, האפליקציות והאתרים שלך משתמשים בשפה הנתמכת הראשונה מתוך השפות שציינת כמועדפות."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"כדי לבחור שפה עבור כל אפליקציה, יש לעבור אל ההגדרות של שפת האפליקציה."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"מידע נוסף על שפות"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="two">להסיר את השפות שנבחרו?</item>
       <item quantity="many">להסיר את השפות שנבחרו?</item>
@@ -182,7 +179,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"הטקסט יוצג בשפה אחרת."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"לא ניתן להסיר את כל השפות"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"אני רוצה לשמור לפחות שפה מועדפת אחת"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"השפה לא זמינה כשפת מערכת"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"ייתכן שהשפה לא תהיה זמינה בחלק מהיישומים"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"הזזה למעלה"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"הזזה למטה"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"העברה לראש הרשימה"</string>
@@ -1493,6 +1490,7 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"‏USB,‏ Bluetooth,‏ Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"‏נקודה לשיתוף אינטרנט, USB, ‏Bluetooth, ‏Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"לא יתבצע שיתוף של חיבור לאינטרנט עם מכשירים אחרים"</string>
+    <string name="tether_preference_summary_off" msgid="6266799346319794630">"השבתה"</string>
     <string name="tethering_interface_options" msgid="7575535888135143650">"שיתוף אינטרנט בין מכשירים"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"‏אין להשתמש בנקודה לשיתוף אינטרנט דרך Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"‏שיתוף אינטרנט רק באמצעות USB"</string>
@@ -4929,6 +4927,7 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"יתרה מינימלית במצב מלא (אפליקציות מוחרגות מחיסכון בסוללה)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"‏יתרה מינימלית במצב מלא (אפליקציות מערכת ללא GUI)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"יתרה מינימלית במצב מלא (שאר האפליקציות)"</string>
+    <string name="tare_min_balance_addition_app_updater" msgid="5391956072471201269">"הוספת יתרה מינימלית במצב מלא (מעדכני אפליקציות)"</string>
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"טעינה"</item>
     <item msgid="658627268149681677">"נמנום"</item>
