--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"ಆನ್ ಆಗಿದೆ"</string>
     <string name="off" msgid="2898123876644709799">"ಆಫ್ ಆಗಿದೆ"</string>
     <string name="device_info_default" msgid="1406619232867343310">"ಅಪರಿಚಿತ"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"ಮಾಹಿತಿಯನ್ನು ತೋರಿಸಲು ಟ್ಯಾಪ್ ಮಾಡಿ"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">ಡೆವಲಪರ್‌ ಆಗಲು ಇದೀಗ ನೀವು ಕೇವಲ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ಹೆಜ್ಜೆಗಳು ದೂರದಲ್ಲಿರುವಿರಿ.</item>
       <item quantity="other">ಡೆವಲಪರ್‌ ಆಗಲು ಇದೀಗ ನೀವು ಕೇವಲ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ಹೆಜ್ಜೆಗಳು ದೂರದಲ್ಲಿರುವಿರಿ.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"ಸ್ಕಿಪ್‌"</string>
     <string name="next_label" msgid="1248293387735652187">"ಮುಂದೆ"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ಭಾಷೆಗಳು"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"ಆದ್ಯತೆಯ ಭಾಷಾ ಕ್ರಮ"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"ಸಿಸ್ಟಂ ಭಾಷೆ"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ತೆಗೆದುಹಾಕಿ"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ಭಾಷೆ ಸೇರಿಸಿ"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ಭಾಷೆ"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ಆದ್ಯತೆಯ ಭಾಷೆ"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ಆ್ಯಪ್ ಭಾಷೆಗಳು"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ಆ್ಯಪ್ ಭಾಷೆಗಳು"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ಪ್ರತಿ ಆ್ಯಪ್‌ಗಾಗಿ ಭಾಷೆಯನ್ನು ಸೆಟ್ ಮಾಡಿ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ಆ್ಯಪ್ ಭಾಷೆ"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ಆ್ಯಪ್ ಭಾಷೆ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ಸೂಚಿಸಿರುವ ಭಾಷೆಗಳು"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ಎಲ್ಲಾ ಭಾಷೆಗಳು"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ಸಿಸ್ಟಂ ಭಾಷೆ"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ಸೆಟ್ಟಿಂಗ್‌ಗಳ ಮೂಲಕ ಈ ಆ್ಯಪ್‌ಗಾಗಿ ಭಾಷೆಯ ಆಯ್ಕೆಯು ಲಭ್ಯವಿಲ್ಲ."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ಆ್ಯಪ್‌ನಲ್ಲಿ ಲಭ್ಯವಿರುವ ಭಾಷೆಗಳಿಗಿಂತ ಭಾಷೆ ಭಿನ್ನವಾಗಿರಬಹುದು. ಕೆಲವು ಆ್ಯಪ್‌ಗಳು ಈ ಸೆಟ್ಟಿಂಗ್ ಅನ್ನು ಬೆಂಬಲಿಸದಿರಬಹುದು."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"ಭಾಷೆಯ ಆಯ್ಕೆಯನ್ನು ಬೆಂಬಲಿಸುವ ಆ್ಯಪ್‌ಗಳನ್ನು ಮಾತ್ರ ಇಲ್ಲಿ ತೋರಿಸಲಾಗುತ್ತದೆ."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"ನಿಮ್ಮ ಸಿಸ್ಟಂ, ಆ್ಯಪ್ಗಳು ಮತ್ತು ವೆಬ್‌ಸೈಟ್‌ಗಳು ನಿಮ್ಮ ಆದ್ಯತೆಯ ಭಾಷೆಗಳಿಂದ ಮೊದಲ ಬೆಂಬಲಿತ ಭಾಷೆಯನ್ನು ಬಳಸುತ್ತವೆ."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ಪ್ರತಿ ಆ್ಯಪ್‌ಗೆ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಲು, ಆ್ಯಪ್ ಭಾಷೆ ಸೆಟ್ಟಿಂಗ್‌ಗಳಿಗೆ ಹೋಗಿ."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ಭಾಷೆಗಳ ಕುರಿತು ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">ಆಯ್ಕೆಮಾಡಿದ ಭಾಷೆಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?</item>
       <item quantity="other">ಆಯ್ಕೆಮಾಡಿದ ಭಾಷೆಗಳನ್ನು ತೆಗೆದುಹಾಕಬೇಕೇ?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"ಪಠ್ಯವನ್ನು ಮತ್ತೊಂದು ಭಾಷೆಯಲ್ಲಿ ತೋರಿಸಲಾಗುತ್ತದೆ."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ಎಲ್ಲಾ ಭಾಷೆಗಳನ್ನು ತೆಗೆದುಹಾಕಲು ಸಾಧ್ಯವಿಲ್ಲ"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"ಕನಿಷ್ಠ ಒಂದು ಪ್ರಾಶಸ್ತ್ಯದ ಭಾಷೆಯನ್ನು ಇರಿಸಿ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"ಸಿಸ್ಟಂ ಭಾಷೆಯಾಗಿ ಲಭ್ಯವಿಲ್ಲ"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"ಕೆಲವು ಅಪ್ಲಿಕೇಶನ್‌ಗಳಲ್ಲಿ ಲಭ್ಯವಿಲ್ಲದೇ ಇರಬಹುದು"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ಮೇಲೆ ಸರಿಸಿ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ಕೆಳಗೆ ಸರಿಸಿ"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ಮೇಲಕ್ಕೆ ಸರಿಸು"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ಬ್ಲೂಟೂತ್, ಇಥರ್ನೆಟ್"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ಹಾಟ್‌ಸ್ಪಾಟ್, USB, ಬ್ಲೂಟೂತ್, ಇಥರ್ನೆಟ್"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ಇತರ ಸಾಧನಗಳ ಜೊತೆಗೆ ಇಂಟರ್ನೆಟ್ ಅನ್ನು ಹಂಚಿಕೊಳ್ಳುತ್ತಿಲ್ಲ"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ಟೆಥರಿಂಗ್‌"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ವೈ-ಫೈ ಹಾಟ್‌ಸ್ಪಾಟ್ ಬಳಸಬೇಡಿ"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"USB ಮೂಲಕ ಮಾತ್ರ ಇಂಟರ್ನೆಟ್ ಹಂಚಿಕೊಳ್ಳಿ"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ (ವಿನಾಯಿತಿ ನೀಡಿರುವುದು)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ (ಹೆಡ್‌ಲೆಸ್ ಸಿಸ್ಟಂ ಆ್ಯಪ್)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ಕನಿಷ್ಠ ಬ್ಯಾಟರಿ ಬ್ಯಾಲೆನ್ಸ್ (ಉಳಿದಿರುವ ಆ್ಯಪ್‌ಗಳು)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ಚಾರ್ಜಿಂಗ್ ಆಗುತ್ತಿದೆ"</item>
     <item msgid="658627268149681677">"ಡೋಸ್"</item>
