--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Күйүк"</string>
     <string name="off" msgid="2898123876644709799">"Өчүк"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Белгисиз"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Иштеп чыгуучу болушуңузга <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> кадам гана калды.</item>
       <item quantity="one">Иштеп чыгуучу болушуңузга <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> кадам гана калды.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Өткөрүп жиберүү"</string>
     <string name="next_label" msgid="1248293387735652187">"Кийинки"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Тилдер"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Тандалган тилдердин ирети"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Системанын тили"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Өчүрүү"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Тил кошуу"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Тил"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Тандалган тил"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Колдонмонун тилдери"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Колдонмонун тилдери"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Ар бир колдонмо үчүн тил тандаңыз"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Колдонмонун тили"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Колдонмонун тили"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Сунушталган тилдер"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Бардык тилдер"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Системанын тили"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Бул колдонмонун тилин Жөндөөлөрдөн тандоого болбойт."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Тил колдонмодо жеткиликтүү тилдерден айырмаланышы мүмкүн. Бул жөндөө айрым колдонмолор тарабынан колдоого алынбайт болушу мүмкүн."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Бул жерде тил тандоого мүмкүн болгон колдонмолорду гана көрөсүз."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Керектүү тилдердин тизмесиндеги биринчи колдоого алынган тил системанын, колдонмолордун жана вебсайттардын тили болуп калат."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ар бир колдонмонун тилин тандоо үчүн колдонмодогу тилдердин параметрлерине өтүңүз."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Тилдер жөнүндө кененирээк маалымат"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Тандалган тилдерди өчүрөсүзбү?</item>
       <item quantity="one">Тандалган тилди өчүрөсүзбү?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Текст башка тилде көрүнөт."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Тилдердин баары алынбайт"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Тандалган тилдерден кеминде бирөөсүн калтырыңыз"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Системанын тили катары жеткиликсиз"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Айрым колдонмолордо жеткиликсиз болушу мүмкүн"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Жогору жылдыруу"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Төмөн жылдыруу"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Башына жылдыруу"</string>
@@ -1096,8 +1093,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Толук дааналык режиминде батареяңыз тез отуруп калат. Дааналыкты өзгөртсөңүз, айрым колдонмолор өчүп кайра күйүшү мүмкүн."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Тандалды"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Түстөр"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Табигый"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Күчөтүлгөн"</string>
@@ -1310,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Жылдыруу учурунда <xliff:g id="NAME">^1</xliff:g> түзмөгүн чыгарбаңыз. \n\nУшул түзмөктөгү <xliff:g id="APP">^2</xliff:g> колдонмосу жылдыруу аяктагыча жеткиликтүү болбойт."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Бул <xliff:g id="NAME">^1</xliff:g> кандайча колдонулат?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD картаны ички сактагыч үчүн форматтоо"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Колдонмолорду жана медиа файлдарды сактап, ушул планшетте гана колдонуңуз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картаны тууралоо жөнүндө кеңири маалымат алыңыз&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматтоо"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD картаны ички сактагыч үчүн форматтоо"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Колдонмолорду жана медиа файлдарды сактап, ушул түзмөктө гана колдонуңуз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картаны тууралоо жөнүндө кеңири маалымат алыңыз&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматтоо"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Же"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD картаны ташыма сактагыч катары форматтоо"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Сүрөттөрдү, видеолорду, ырларды жана башкаларды сактап, аларды башка түзмөктөрдө колдонуңуз. &lt;a href=https://support.google.com/android/answer/12153449&gt;SD картаны тууралоо жөнүндө кеңири маалымат алыңыз&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматтоо"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Кийин жөндөө"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Бул <xliff:g id="NAME">^1</xliff:g> форматталсынбы?"</string>
@@ -1451,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Хотспот, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Интернет башка түзмөктөр менен бөлүшүлгөн жок"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Модем режими"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi байланыш түйүнү колдонулбасын"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Интернетти USB аркылуу гана бөлүшөсүз"</string>
@@ -4793,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Минималдуу баланс (Чыгарылган)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Минималдуу баланс (Headless System App)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Минималдуу баланс (Башка колдонмолор)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Кубатталууда"</item>
     <item msgid="658627268149681677">"Көшүү режими"</item>
