--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"ເປີດ"</string>
     <string name="off" msgid="2898123876644709799">"ປິດ"</string>
     <string name="device_info_default" msgid="1406619232867343310">"ບໍ່ຮູ້ຈັກ"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"ແຕະເພື່ອສະແດງຂໍ້ມູນ"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">ຕອນນີ້ທ່ານຍັງ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ຂັ້ນຕອນເພື່ອຈະເປັນນັກພັດທະນາ.</item>
       <item quantity="one">ຕອນນີ້ທ່ານຍັງ <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> ຂັ້ນຕອນເພື່ອຈະເປັນນັກພັດທະນາ.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"ຂ້າມ"</string>
     <string name="next_label" msgid="1248293387735652187">"ຖັດໄປ"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ພາ​ສາ"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"ລຳດັບພາສາທີ່ຕ້ອງການ"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"ພາສາລະບົບ"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ລຶບອອກ"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ເພີ່ມ​ພາ​ສາ"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ພາສາ"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ພາສາທີ່ຕ້ອງການ"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ພາສາແອັບ"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ພາສາແອັບ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ຕັ້ງພາສາສຳລັບແຕ່ລະແອັບ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ພາສາແອັບ"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ພາສາແອັບ"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ພາສາທີ່ແນະນຳ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ພາສາທັງໝົດ"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ພາສາລະບົບ"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ບໍ່ສາມາດເລືອກພາສາສຳລັບແອັບນີ້ຈາກການຕັ້ງຄ່າໄດ້."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ພາສາອາດແຕກຕ່າງໄປຈາກພາສາທີ່ສາມາດໃຊ້ໄດ້ໃນແອັບ. ບາງແອັບອາດບໍ່ຮອງຮັບການຕັ້ງຄ່ານີ້."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"ມີພຽງແອັບທີ່ຮອງຮັບການເລືອກພາສາທີ່ສະແດງຢູ່ບ່ອນນີ້."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"ລະບົບ, ແອັບ ແລະ ເວັບໄຊຂອງທ່ານຈະໃຊ້ພາສາທີ່ຮອງຮັບກ່ອນຈາກພາສາທີ່ທ່ານຕ້ອງການ."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ເພື່ອເລືອກພາສາໃດໜຶ່ງສຳລັບແຕ່ລະແອັບ, ໃຫ້ເຂົ້າໄປການຕັ້ງຄ່າພາສາແອັບ."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ສຶກສາເພີ່ມເຕີມກ່ຽວກັບພາສາ"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">ລຶບພາສາທີ່ເລືອກບໍ?</item>
       <item quantity="one">ລຶບພາສາທີ່ເລືອກບໍ?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"ຂໍ້ຄວາມຈະຖືກສະແດງໃນພາສາອື່ນ."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ບໍ່ສາມາດລຶບທຸກພາສາອອກໄດ້"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"ເກັບໄວ້ຢ່າງໜ້ອຍໜຶ່ງພາສາທີ່ຕ້ອງການ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"ບໍ່ສາມາດໃຊ້ໄດ້ເປັນພາສາຂອງລະບົບ"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"ອາດບໍ່ສາມາດໃຊ້ໄດ້ໃນບາງແອັບ"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ຍ້າຍຂຶ້ນ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ຍ້າຍລົງ"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ຍ້າຍໄປເທິງສຸດ"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ຮັອດສະປອດ, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ບໍ່ໄດ້ແບ່ງປັນອິນເຕີເນັດກັບອຸປະກອນອື່ນ"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ການປ່ອຍສັນຍານ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ຢ່າໃຊ້ Wi‑Fi ຮັອດສະປອດ"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"ແບ່ງປັນອິນເຕີເນັດຜ່ານ USB ເທົ່ານັ້ນ"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ໄດ້ຮັບການຍົກເວັ້ນ)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ແອັບລະບົບແບບບໍ່ມີສ່ວນຫົວ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ຍອດຄົງເຫຼືອຂັ້ນຕ່ຳເມື່ອສາກເຕັມ (ແອັບທີ່ຍັງເຫຼືອ)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ກຳລັງສາກໄຟ"</item>
     <item msgid="658627268149681677">"Doze"</item>
