--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Įjungta"</string>
     <string name="off" msgid="2898123876644709799">"Išjungta"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Nežinomas"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Liko atlikti <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> veiksmą ir būsite kūrėjas.</item>
       <item quantity="few">Liko atlikti <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> veiksmus ir būsite kūrėjas.</item>
@@ -154,15 +156,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Praleisti"</string>
     <string name="next_label" msgid="1248293387735652187">"Kitas"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Kalbos"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Pageidaujamų kalbų eiliškumas"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Sistemos kalba"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Pašalinti"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Pridėti kalbą"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Kalba"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Pageidaujama kalba"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Programų kalbos"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Programų kalbos"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Nustatykite kiekvienos programos kalbą"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Programos kalba"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Programos kalba"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Siūlomos kalbos"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Visos kalbos"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Sistemos kalba"</string>
@@ -170,9 +170,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Šios programos kalbos pasirinkimas nepasiekiamas iš skilties „Nustatymai“."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Kalba gali skirtis nuo programoje pasiekiamų kalbų. Kai kuriose programose šis nustatymas gali būti nepalaikomas."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Čia rodomos tik kalbos pasirinkimą palaikančios programos."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Jūsų sistema, programos ir svetainės naudoja pirmąją palaikomą kalbą iš pageidaujamų sąrašo."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Norėdami pasirinkti kalbą kiekvienai programai, eikite į programų kalbų nustatymus."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Sužinokite daugiau apie kalbas"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Pašalinti pasirinktas kalbas?</item>
       <item quantity="few">Pašalinti pasirinktas kalbas?</item>
@@ -182,7 +179,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Tekstas bus rodomas kita kalba."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Negalima pašalinti visų kalbų"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Palikite bent vieną pageidaujamą kalbą"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nepasiekiama kaip sistemos kalba"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Gali būti nepasiekiama kai kuriose programose"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Perkelti aukštyn"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Perkelti žemyn"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Perkelti į viršų"</string>
@@ -1351,17 +1348,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Nepašalinkite <xliff:g id="NAME">^1</xliff:g>, kol perkeliama. \n\nPrograma <xliff:g id="APP">^2</xliff:g> šiame įrenginyje nebus pasiekiama, kol perkėlimas bus baigtas."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kaip naudosite šią saugyklą (<xliff:g id="NAME">^1</xliff:g>)?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatuokite SD kortelę kaip vidinę atmintį"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Saugokite programas ir mediją, kad galėtumėte tornaudoti tik šiame planšetiniame kompiuteryje. &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatuokite SD kortelę kaip vidinę atmintį"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Saugokite programas ir mediją, kad galėtumėte naudoti tik šiame telefone &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Arba"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatuoti SD kortelę kaip nešiojamąją saugyklą"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Saugokite nuotraukas, vaizdo įrašus, muziką ir kitą turinį, kurį galėsite pasiekti kituose įrenginiuose. &lt;a href=https://support.google.com/android/answer/12153449&gt;Sužinokite daugiau apie SD kortelės nustatymą&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatuoti"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Nustatyti vėliau"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatuoti šią saugyklą (<xliff:g id="NAME">^1</xliff:g>)?"</string>
@@ -1492,6 +1486,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, „Bluetooth“, eternetas"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Viešosios interneto prieigos taškas, USB, „Bluetooth“, eternetas"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internetas nebendrinamas su kitais įrenginiais"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Įrenginio kaip modemo naudojimas"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Nenaudoti „Wi‑Fi“ viešosios interneto prieigos taško"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Bendrinti internetą tik naudojant USB"</string>
@@ -4928,6 +4924,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Mažiausias visiško įkrovimo balansas (pritaikyta išimtis)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Mažiausias visiško įkrovimo balansas (sist. programa be grafinės naud. sąsajos)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Mažiausias visiško įkrovimo balansas (likusios programos)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Įkrovimas"</item>
     <item msgid="658627268149681677">"Snustelėjimas"</item>
