--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Ieslēgts"</string>
     <string name="off" msgid="2898123876644709799">"Izslēgts"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Nezināms"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="zero">Lai jūs kļūtu par izstrādātāju, atlikušas <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> darbības.</item>
       <item quantity="one">Lai jūs kļūtu par izstrādātāju, atlikusi <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> darbība.</item>
@@ -153,15 +155,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Izlaist"</string>
     <string name="next_label" msgid="1248293387735652187">"Tālāk"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Valodas"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Vēlamo valodu secība"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Sistēmas valoda"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Noņemt"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Pievienot valodu"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Valoda"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Vēlamā valoda"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Lietotņu valodas"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Lietotņu valodas"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Iestatiet katras lietotnes valodu"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Lietotnes valoda"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Lietotnes valoda"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Ieteiktās valodas"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Visas valodas"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Sistēmas valoda"</string>
@@ -169,9 +169,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Iestatījumos nav pieejama valodas atlase šai lietotnei."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Valoda var atšķirties no lietotnē pieejamās valodas. Dažās lietotnēs šis iestatījums var netikt atbalstīts."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Šeit tiek rādītas tikai lietotnes, kurās tiek atbalstīta valodas atlase."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistēmā, lietotnēs un tīmekļa vietnēs tiek izmantota pirmā atbalstītā valoda no jūsu vēlamajām valodām."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Lai atlasītu valodu katrai lietotnei, pārejiet uz lietotnes valodas iestatījumiem."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Plašāka informācija par valodām"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="zero">Vai noņemt atlasītās valodas?</item>
       <item quantity="one">Vai noņemt atlasītās valodas?</item>
@@ -180,7 +177,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teksts tiks rādīts citā valodā."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nevar noņemt visas valodas"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Paturiet vismaz vienu vēlamo valodu"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nav pieejama kā sistēmas valoda"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Var nebūt pieejama dažās lietotnēs"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Pārvietot uz augšu"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Pārvietot uz leju"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Pārvietot uz sākumu"</string>
@@ -1116,8 +1113,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Izmantojot pilnu izšķirtspēju, tiek patērēts vairāk akumulatora enerģijas. Ja mainīsiet izšķirtspēju, noteiktas lietotnes var tikt restartētas."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Atlasīta"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Krāsas"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Dabiska"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Paspilgtināta"</string>
@@ -1331,17 +1327,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Neizņemiet <xliff:g id="NAME">^1</xliff:g>, kamēr tiek pārvietoti faili. \n\nKamēr failu pārvietošana nebūs pabeigta, lietotne <xliff:g id="APP">^2</xliff:g> šajā ierīcē nebūs pieejama."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kā tiks izmantota ierīce <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatēt SD karti iekšējai atmiņai"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Uzglabājiet lietotnes un multivides failus izmantošanai tikai šajā planšetdatorā. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatēt"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatēt SD karti iekšējai atmiņai"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Uzglabājiet lietotnes un multivides failus izmantošanai tikai šajā tālrunī. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatēt"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Vai"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatēt SD karti pārnēsājamai krātuvei"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Uzglabājiet fotoattēlus, videoklipus, mūziku un citu saturu, lai varētu tam piekļūt no citām ierīcēm. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatēt"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Iestatīt vēlāk"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vai formatēt šo: <xliff:g id="NAME">^1</xliff:g>?"</string>
@@ -1472,6 +1465,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Tīklājs, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internets netiek koplietots ar citām ierīcēm"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Piesaiste"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Neizmantot Wi‑Fi tīklāju"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Kopīgot interneta savienojumu, tikai izmantojot USB"</string>
@@ -4861,6 +4856,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimālais atlikums ar uzlādētu ierīci (izslēgtas lietotnes)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimālais atlikums ar uzlādētu ierīci (bezgalvas sistēmas lietotne)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimālais atlikums ar uzlādētu ierīci (atlikušās lietotnes)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Uzlāde"</item>
     <item msgid="658627268149681677">"Snauda"</item>
