--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Dihidupkan"</string>
     <string name="off" msgid="2898123876644709799">"Dimatikan"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Tidak diketahui"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Ketik untuk menunjukkan maklumat"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other"><xliff:g id="STEP_COUNT_1">%1$d</xliff:g> langkah lagi sebelum menjadi pembangun.</item>
       <item quantity="one"><xliff:g id="STEP_COUNT_0">%1$d</xliff:g> langkah lagi sebelum menjadi pembangun.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Langkau"</string>
     <string name="next_label" msgid="1248293387735652187">"Seterusnya"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Bahasa"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Susunan bahasa pilihan"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Bahasa sistem"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Alih keluar"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Tambahkan bahasa"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Bahasa"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Bahasa Pilihan"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Bahasa apl"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Bahasa Apl"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Tetapkan bahasa untuk setiap apl"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Bahasa apl"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Bahasa Apl"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Bahasa yang dicadangkan"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Semua bahasa"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Bahasa sistem"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Pemilihan bahasa untuk apl ini tidak tersedia daripada Tetapan."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Bahasa mungkin berbeza daripada bahasa yang tersedia dalam apl. Sesetengah apl mungkin tidak menyokong tetapan ini."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Hanya apl yang menyokong pemilihan bahasa dipaparkan di sini."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Sistem, apl dan laman web anda menggunakan bahasa pertama yang disokong daripada bahasa pilihan anda."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Untuk memilih bahasa bagi setiap apl, pergi ke tetapan bahasa apl."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Ketahui lebih lanjut tentang bahasa"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Alih keluar bahasa yang dipilih?</item>
       <item quantity="one">Alih keluar bahasa yang dipilih?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Teks akan dipaparkan dalam bahasa lain."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Tidak boleh mengalih keluar semua bahasa"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Simpan sekurang-kurangnya satu bahasa pilihan"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Tidak tersedia sebagai bahasa sistem"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Mungkin tidak tersedia dalam sesetengah apl"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Alihkan ke atas"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Alih ke bawah"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Alih ke paling atas"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Tempat liputan, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Tidak berkongsi Internet dengan peranti lain"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Penambatan"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Jangan gunakan tempat liputan Wi-Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Kongsi Internet melalui USB sahaja"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Baki Penuh Minimum (Dikecualikan)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Baki Penuh Minimum (Apl Sistem Tanpa Kepala)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Baki Penuh Minimum (Apl yang Tinggal)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Mengecas"</item>
     <item msgid="658627268149681677">"Lelap"</item>
