--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"På"</string>
     <string name="off" msgid="2898123876644709799">"Av"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Ukjent"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Trykk for å vise informasjon"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Nå er du <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> steg fra å bli utvikler.</item>
       <item quantity="one">Nå er du <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> steg fra å bli utvikler.</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Hopp over"</string>
     <string name="next_label" msgid="1248293387735652187">"Neste"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Språk"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Rekkefølge for foretrukne språk"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Systemspråk"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Fjern"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Legg til et språk"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Språk"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Foretrukket språk"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Appspråk"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Språk i appen"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Angi språket for hver app"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Appspråk"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Språk i appen"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Foreslåtte språk"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Alle språk"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Systemspråk"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Språkvalg for denne appen er ikke tilgjengelig fra innstillingene."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Språket kan være forskjellig fra språkene som er tilgjengelige i appen. Noen apper støtter muligens ikke denne innstillingen."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Bare apper som støtter språkvalg, vises her."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Systemet, apper og nettsteder bruker det første språket som støttes, av de foretrukne språkene dine."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"For å velge et språk for hver app, gå til innstillingene for appspråk."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Finn ut mer om språk"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Vil du fjerne de valgte språkene?</item>
       <item quantity="one">Vil du fjerne det valgte språket?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Da vises tekst på et annet språk."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Du kan ikke fjerne alle språkene"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Behold minst ett av de foretrukne språkene"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Ikke tilgjengelig som systemspråk"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Det kan hende at det ikke er tilgjengelig i enkelte apper"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Flytt opp"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Flytt ned"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Flytt til toppen"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Wifi-sone, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Deler ikke internett med andre enheter"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Internettdeling"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Ikke bruk wifi-sone"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Bare del internett via USB"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimum saldo når enheten er fulladet (fritatt)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimum saldo når enheten er fulladet (hodeløs systemapp)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimum saldo når enheten er fulladet (gjenværende apper)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Lading"</item>
     <item msgid="658627268149681677">"Slumremodus"</item>
