--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"अन छ"</string>
     <string name="off" msgid="2898123876644709799">"अफ छ"</string>
     <string name="device_info_default" msgid="1406619232867343310">"अज्ञात"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">अहिले तपाईं विकासकर्ता हुनका लागि <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> चरण टाढा हुनुहुन्छ।</item>
       <item quantity="one">अहिले तपाईं विकासकर्ता हुनका लागि <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> चरण टाढा हुनुहुन्छ।</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"स्किप गर्नुहोस्"</string>
     <string name="next_label" msgid="1248293387735652187">"अर्को"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"भाषाहरू"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"रुचाइएको भाषाको क्रम"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"सिस्टमको भाषा"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"हटाउनुहोस्"</string>
     <string name="add_a_language" msgid="2126220398077503271">"भाषा हाल्नुहोस्"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"भाषा"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"रुचाइएको भाषा"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"एपका भाषा"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"एपका भाषा"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"हरेक एपमा उक्त भाषा सेट गर्नुहोस्"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"एपको भाषा"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"एपको भाषा"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"सिफारिस गरिएका भाषाहरू"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"सबै भाषा"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"सिस्टमको भाषा"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"सेटिङबाट यो एपका लागि भाषा चयन गर्न मिल्दैन।"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"यो भाषा एपमा उपलब्ध भाषाहरूभन्दा फरक हुन सक्छ। यो सेटिङले केही एपमा काम नगर्न सक्छ।"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"भाषा चयन गर्ने सुविधा उपलब्ध भएका एपहरू मात्र यहाँ देखाइन्छन्।"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"तपाईंका सिस्टम, एप र वेबसाइटहरूले तपाईंले रुचाएको भाषाको सूचीमा रहेको प्रयोग गर्न सकिने पहिलो भाषा प्रयोग गर्छन्।"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"हरेक एपका हकमा बेग्लाबेग्लै भाषा चयन गर्न एपको भाषासम्बन्धी सेटिङमा जानुहोस्।"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"भाषाहरूका बारेमा थप जान्नुहोस्"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">चयन गरिएका भाषाहरूलाई हटाउने हो?</item>
       <item quantity="one">चयन गरिएको भाषा हटाउने हो?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"पाठ अर्को भाषामा प्रदर्शन हुनेछ।"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"सबै भाषाहरूलाई हटाउन सक्दैन"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"कम्तीमा एउटा रुचाइएको भाषालाई राख्नुहोस्"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"यो भाषा सिस्टमको भाषाका रूपमा उपलब्ध छैन"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"केही एपहरूमा उपलब्ध नहुन सक्छ"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"माथि सार्नुहोस्"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"तल सार्नुहोस्"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"माथिल्लो भागमा सार्नुहोस्"</string>
@@ -1096,8 +1093,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"१०८० पिक्सेल FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"१४४० पिक्सेल QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"फुल रिजोल्युसन प्रयोग गर्दा तपाईंको डिभाइसको ब्याट्री बढी खपत हुन्छ। तपाईंले रोजेको रिजोल्युसन प्रयोग गर्नुभयो भने केही एपहरू रिस्टार्ट हुन सक्छन्।"</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"चयन गरियो"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"रङ्गहरू"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"प्राकृतिक"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"बुस्ट गरिएको"</string>
@@ -1310,17 +1306,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"सार्ने क्रममा <xliff:g id="NAME">^1</xliff:g> नहटाउनुहोस्। \n\nसार्ने क्रम पूरा नहुन्जेल सम्म यो डिभाइसको<xliff:g id="APP">^2</xliff:g> एप उपलब्ध हुने छैन।"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"तपाईं यो <xliff:g id="NAME">^1</xliff:g> कसरी प्रयोग गर्नुहुन्छ?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"इन्टर्नल मेमोरीका लागि SD कार्ड फर्म्याट गर्नुहोस्"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"यो ट्याब्लेटमा मात्र प्रयोग गर्नका लागि एप र मिडिया भण्डारण गर्नुहोस्। &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेटअप गर्ने तरिकाका बारेमा थप जान्नुहोस्&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"फर्म्याट गर्नुहोस्"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"इन्टर्नल मेमोरीका लागि SD कार्ड फर्म्याट गर्नुहोस्"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"यो फोनमा मात्र प्रयोग गर्नका लागि एप र मिडिया भण्डारण गर्नुहोस्। &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेटअप गर्ने तरिकाका बारेमा थप जान्नुहोस्&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"फर्म्याट गर्नुहोस्"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"वा"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"पोर्टेबल भण्डारणका लागि SD कार्ड फर्म्याट गर्नुहोस्"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"फोटो, भिडियो, सङ्गीत र थप सामग्री भण्डारण गर्नुहोस् र अन्य डिभाइसहरूमा ती सामग्री हेर्नुहोस् तथा प्रयोग गर्नुहोस्। &lt;a href=https://support.google.com/android/answer/12153449&gt;SD कार्ड सेटअप गर्ने तरिकाका बारेमा थप जान्नुहोस्&lt;/a&gt;."</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"फर्म्याट गर्नुहोस्"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"पछि सेटअप गर्नुहोस्"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"यो <xliff:g id="NAME">^1</xliff:g> फर्म्याट गर्ने हो?"</string>
@@ -1451,6 +1444,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ब्लुटुथ, इथरनेट"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"हटस्पट, USB, ब्लुटुथ, इथरनेट"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"अन्य डिभाइससँग इन्टरनेट बाँडिएको छैन"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"टेदरिङ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi हटस्पट प्रयोग नगर्नुहोस्"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"USB बाट मात्रै इन्टरनेट बाँड्नुहोस्"</string>
@@ -4793,6 +4788,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ब्याट्री पूरा चार्ज हुँदाखेरिको न्यूनतम ब्यालेन्स (छुट दिइएका एप)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ब्याट्री पूरा चार्ज हुँदाखेरिको न्यूनतम ब्यालेन्स (हेडलेस सिस्टम एप)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ब्याट्री पूरा चार्ज हुँदाखेरिको न्यूनतम ब्यालेन्स (बाँकी एपहरू)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"चार्ज गरिँदै छ"</item>
     <item msgid="658627268149681677">"डोज"</item>
