--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"ଚାଲୁ ଅଛି"</string>
     <string name="off" msgid="2898123876644709799">"ବନ୍ଦ ଅଛି"</string>
     <string name="device_info_default" msgid="1406619232867343310">"ଅଜଣା"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"ସୂଚନା ଦେଖାଇବା ପାଇଁ ଟାପ କରନ୍ତୁ"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">ଜଣେ ଡେଭଲପର୍ ହେବାରେ ଆପଣ ବର୍ତ୍ତମାନ <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ଟି ଷ୍ଟେପ୍ ଦୂରରେ ଅଛନ୍ତି।</item>
       <item quantity="one">ଜଣେ ଡେଭଲପର୍ ହେବାରେ ଆପଣ ବର୍ତ୍ତମାନ <xliff:g id="STEP_COUNT_0">%1$d</xliff:g>ଟି ଷ୍ଟେପ୍ ଦୂରରେ ଅଛନ୍ତି।</item>
@@ -152,15 +153,13 @@
     <string name="skip_label" msgid="6380034601349015895">"ଛାଡ଼ି ଦିଅନ୍ତୁ"</string>
     <string name="next_label" msgid="1248293387735652187">"ପରବର୍ତ୍ତୀ"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"ଭାଷାଗୁଡ଼ିକ"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"ପସନ୍ଦର ଭାଷା କ୍ରମ"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"ସିଷ୍ଟମ ଭାଷା"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"ବାହାର କରନ୍ତୁ"</string>
     <string name="add_a_language" msgid="2126220398077503271">"ଏକ ଭାଷା ଯୋଗ କରନ୍ତୁ"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"ଭାଷା"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"ପସନ୍ଦର ଭାଷା"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"ଆପ ଭାଷାଗୁଡ଼ିକ"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"ଆପର ଭାଷାଗୁଡ଼ିକ"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"ପ୍ରତ୍ୟେକ ଆପ ପାଇଁ ଭାଷା ସେଟ କରନ୍ତୁ"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"ଆପ ଭାଷା"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"ଆପର ଭାଷା"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"ପ୍ରସ୍ତାବିତ ଭାଷାଗୁଡ଼ିକ"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"ସମସ୍ତ ଭାଷା"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"ସିଷ୍ଟମ ଭାଷା"</string>
@@ -168,9 +167,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"ସେଟିଂସରୁ ଏହି ଆପ ପାଇଁ ଭାଷା ଚୟନ ଉପଲବ୍ଧ ନାହିଁ।"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"ଆପରେ ଉପଲବ୍ଧ ଥିବା ଭାଷାଗୁଡ଼ିକଠାରୁ ଏହି ଭାଷା ଭିନ୍ନ ହୋଇପାରେ। କିଛି ଆପ୍ସ ଏହି ସେଟିଂସକୁ ସମର୍ଥନ କରିନପାରେ।"</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"ଏଠାରେ କେବଳ ଭାଷା ଚୟନକୁ ସମର୍ଥନ କରୁଥିବା ଆପ୍ସ ଦେଖାଯାଏ।"</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"ଆପଣଙ୍କ ସିଷ୍ଟମ, ଆପ୍ସ ଏବଂ ୱେବସାଇଟଗୁଡ଼ିକ ଆପଣଙ୍କର ପସନ୍ଦର ଭାଷାଗୁଡ଼ିକରୁ ପ୍ରଥମ ସମର୍ଥିତ ଭାଷାକୁ ବ୍ୟବହାର କରେ।"</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"ପ୍ରତ୍ୟେକ ଆପ ପାଇଁ ଏକ ଭାଷା ଚୟନ କରିବାକୁ, ଆପ ଭାଷା ସେଟିଂସକୁ ଯାଆନ୍ତୁ।"</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"ଭାଷାଗୁଡ଼ିକ ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">ଚୟନିତ ଭାଷାଗୁଡ଼ିକୁ କାଢ଼ିଦେବେ?</item>
       <item quantity="one">ଚୟନିତ ଭାଷାକୁ କାଢ଼ିଦେବେ?</item>
@@ -178,7 +174,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"ଅନ୍ୟ ଭାଷାରେ ଲେଖା ଦେଖାଦେବ।"</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"ସମସ୍ତ ଭାଷାଗୁଡ଼ିକୁ ଅପସାରଣ କରିପାରିବେ ନାହିଁ"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"ଅତିକମରେ ଗୋଟିଏ ମନପସନ୍ଦ ଭାଷା ରଖନ୍ତୁ"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"ସିଷ୍ଟମ ଭାଷା ଭାବରେ ଉପଲବ୍ଧ ନାହିଁ"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"କେତେକ ଆପ୍‌ରେ ଉପଲବ୍ଧ ନଥାଇପାରେ"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"ଉପରକୁ ନେଇଯଆନ୍ତୁ"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"ତଳକୁ ନେଇଯାଆନ୍ତୁ"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"ଉପରକୁ ଘୁଞ୍ଚାନ୍ତୁ"</string>
@@ -1447,6 +1443,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, ବ୍ଲୁଟୁଥ୍, ଇଥରନେଟ୍"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"ହଟସ୍ପଟ୍, USB, ବ୍ଲୁଟୁଥ୍, ଇଥରନେଟ୍"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"ଅନ୍ୟ ଡିଭାଇସଗୁଡ଼ିକ ସହ ଇଣ୍ଟର୍ନେଟ୍ ସେୟାର୍ କରୁନାହିଁ"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"ଟିଥରିଂ"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"ୱାଇ‑ଫାଇ ହଟସ୍ପଟ୍ ବ୍ୟବହାର କରନ୍ତୁ ନାହିଁ"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"କେବଳ USB ମାଧ୍ୟମରେ ଇଣ୍ଟର୍ନେଟ୍ ସେୟାର୍ କରନ୍ତୁ"</string>
@@ -4789,6 +4787,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"ଡିଭାଇସ ପୂରା ଚାର୍ଜ ଥିବା ବେଳେ ସର୍ବାଧିକ ବାଲାନ୍ସ (ବାଦ୍ ଦିଆଯାଇଛି)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"ଡିଭାଇସ ପୂରା ଚାର୍ଜ ଥିବା ବେଳେ ସର୍ବନିମ୍ନ ବାଲାନ୍ସ (Headless System ଆପ)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"ଡିଭାଇସ ପୂରା ଚାର୍ଜ ଥିବା ବେଳେ ସର୍ବନିମ୍ନ ବାଲାନ୍ସ (ଅବଶିଷ୍ଟ ଆପ୍ସ)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"ଚାର୍ଜ ହେଉଛି"</item>
     <item msgid="658627268149681677">"ଡଜ୍"</item>
