--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Включено"</string>
     <string name="off" msgid="2898123876644709799">"Отключено"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Неизвестно"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="one">Вы почти у цели. Остался <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> шаг.</item>
       <item quantity="few">Вы почти у цели. Осталось <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> шага.</item>
@@ -154,15 +156,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Пропустить"</string>
     <string name="next_label" msgid="1248293387735652187">"Далее"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Языки"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Порядок предпочтительных языков"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Язык системы"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Удалить"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Добавить язык"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Язык"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Предпочтительный язык"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Языки приложений"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Языки приложений"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Выберите язык для каждого приложения"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Язык приложения"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Язык приложения"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Рекомендуемые языки"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Все языки"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Язык системы"</string>
@@ -170,9 +170,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Для этого приложения не поддерживается выбор языка в настройках."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Выбранный язык может быть недоступен в приложении. Некоторые приложения могут не поддерживать этот параметр."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Здесь показаны только приложения, которые поддерживают выбор языка."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Первый поддерживаемый язык в списке предпочтительных используется как язык системы, приложений и сайтов."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Выбрать язык для отдельных приложений можно в их настройках."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Подробнее о языках"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="one">Удалить выбранные языки?</item>
       <item quantity="few">Удалить выбранные языки?</item>
@@ -182,7 +179,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Текст будет показан на другом языке."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Невозможно удалить все языки"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Оставьте хотя бы один язык."</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Недоступен как язык системы"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Может быть недоступен в некоторых приложениях"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Поднять"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Опустить"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Переместить в начало"</string>
@@ -1136,8 +1133,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Исходное разрешение расходует больше заряда. При смене разрешения некоторые приложения могут перезапуститься."</string>
-    <!-- no translation found for screen_resolution_selected_a11y (6158451180032224977) -->
-    <skip />
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Выбрано"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Цвета"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Натуральные"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Яркие"</string>
@@ -1352,17 +1348,14 @@
     <string name="storage_wizard_move_progress_body" msgid="2396714553394935094">"Не извлекайте устройство \"<xliff:g id="NAME">^1</xliff:g>\" во время переноса.\n\nПока он не завершится, приложение \"<xliff:g id="APP">^2</xliff:g>\" будет недоступно на этом устройстве."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Как будет использоваться <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Форматирование SD-карты как внутренней памяти"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (6050264373968853062) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="6050264373968853062">"Хранить приложения и медиафайлы для использования только на этом планшете. Подробнее о том, &lt;ahref=https://support.google.com/android/answer/12153449&gt;как настроить SD-карту&lt;/a&gt;…"</string>
     <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Форматировать"</string>
     <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Форматирование SD-карты как внутренней памяти"</string>
-    <!-- no translation found for storage_wizard_init_v2_internal_summary (4315288081962526508) -->
-    <skip />
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="4315288081962526508">"Хранить приложения и медиафайлы для использования только на этом телефоне. Подробнее о том, &lt;ahref=https://support.google.com/android/answer/12153449&gt;как настроить SD-карту&lt;/a&gt;…"</string>
     <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Форматировать"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Или"</string>
     <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Форматирование SD-карты как съемного накопителя"</string>
-    <!-- no translation found for storage_wizard_init_v2_external_summary (2002761631147966185) -->
-    <skip />
+    <string name="storage_wizard_init_v2_external_summary" msgid="2002761631147966185">"Хранить фото, видео, музыку и файлы для использования на других устройствах. Подробнее о том, &lt;ahref=https://support.google.com/android/answer/12153449&gt;как настроить SD-карту&lt;/a&gt;…"</string>
     <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Форматировать"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Настроить позже"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Отформатировать устройство \"<xliff:g id="NAME">^1</xliff:g>\"?"</string>
@@ -1493,6 +1486,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Точка доступа, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Доступ к Интернету закрыт для других устройств"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Режим модема"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Не использовать точку доступа Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Предоставлять доступ к Интернету только через USB"</string>
@@ -4929,6 +4924,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Минимальный баланс при полном заряде (для исключенных приложений)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Минимальный баланс при полном заряде (для консольных системных приложений)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Минимальный баланс при полном заряде (для остальных приложений)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Зарядка"</item>
     <item msgid="658627268149681677">"Спящий режим"</item>
