--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -25,6 +25,7 @@
     <string name="on" msgid="1702751473920047">"Zapnuté"</string>
     <string name="off" msgid="2898123876644709799">"Vypnuté"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Neznáme"</string>
+    <string name="device_info_protected_single_press" msgid="3810785480060743677">"Klepnutím zobrazíte informácie"</string>
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="few">Ešte <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> kroky a bude z vás vývojár.</item>
       <item quantity="many">Ešte <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> kroka a bude z vás vývojár.</item>
@@ -154,15 +155,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Preskočiť"</string>
     <string name="next_label" msgid="1248293387735652187">"Ďalej"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Jazyky"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Poradie preferovaných jazykov"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Jazyk systému"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Odstrániť"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Pridať jazyk"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Jazyk"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Preferovaný jazyk"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Jazyky aplikácií"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Jazyky aplikácií"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Nastavte jazyk pre každú aplikáciu"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Jazyk aplikácie"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Jazyk aplikácie"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Navrhované jazyky"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Všetky jazyky"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Jazyk systému"</string>
@@ -170,9 +169,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Výber jazyka pre túto aplikáciu nie je v Nastaveniach k dispozícii."</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Jazyk môže byť iný, ako sú tie, ktoré sú k dispozícii v aplikácii. Niektoré aplikácie nemusia toto nastavenie podporovať."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Zobrazujú sa tu iba aplikácie, ktoré podporujú výber jazyka."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Systém, aplikácie a weby používajú prvý podporovaný jazyk z preferovaných jazykov."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Ak chcete vybrať jazyk pre každú aplikáciu, prejdite do nastavení jazyka aplikácie."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Ďalšie informácie o jazykoch"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="few">Odstrániť vybraté jazyky?</item>
       <item quantity="many">Odstrániť vybraté jazyky?</item>
@@ -182,7 +178,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Text sa zobrazí v inom jazyku."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Nie je možné odstrániť všetky jazyky"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Ponechajte aspoň jeden preferovaný jazyk"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Nie je k dispozícii ako jazyk systému"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Nemusí byť k dispozícii v niektorých aplikáciách"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Presunúť nahor"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Presunúť nadol"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Presunúť na začiatok"</string>
@@ -1495,6 +1491,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internet sa nezdieľa s inými zariadeniami"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Zdieľanie dátového pripojenia"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Nepoužívať hotspot Wi‑Fi"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Zdieľať internet len cez USB"</string>
@@ -4931,6 +4929,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimálna rovnováha pri úplnom nabití zariadenia (s výnimkou)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Min. rovnováha pri úplnom nabití (systémová aplikácia bez grafického rozhrania)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimálna rovnováha pri úplnom nabití zariadenia (zvyšné aplikácie)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Nabíjanie"</item>
     <item msgid="658627268149681677">"Zdriemnutie"</item>
