--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -25,6 +25,8 @@
     <string name="on" msgid="1702751473920047">"Yoniq"</string>
     <string name="off" msgid="2898123876644709799">"Oʻchiq"</string>
     <string name="device_info_default" msgid="1406619232867343310">"Noma’lum"</string>
+    <!-- no translation found for device_info_protected_single_press (3810785480060743677) -->
+    <skip />
     <plurals name="show_dev_countdown" formatted="false" msgid="1646187747875476269">
       <item quantity="other">Deyarli tugadi, <xliff:g id="STEP_COUNT_1">%1$d</xliff:g> ta qadam qoldi.</item>
       <item quantity="one">Deyarli tugadi, <xliff:g id="STEP_COUNT_0">%1$d</xliff:g> ta qadam qoldi.</item>
@@ -152,15 +154,13 @@
     <string name="skip_label" msgid="6380034601349015895">"Tashlab ketish"</string>
     <string name="next_label" msgid="1248293387735652187">"Keyingisi"</string>
     <string name="language_picker_title" msgid="4271307478263345133">"Tillar"</string>
-    <string name="language_picker_category_title" msgid="1792199453060454565">"Tanlangan tillar tartibi"</string>
-    <string name="desc_current_default_language" msgid="1901157141663662859">"Tizim tili"</string>
     <string name="locale_remove_menu" msgid="3521546263421387474">"Olib tashlash"</string>
     <string name="add_a_language" msgid="2126220398077503271">"Til qo‘shish"</string>
     <string name="app_locale_preference_title" msgid="5513627099300360232">"Til"</string>
     <string name="locale_picker_category_title" msgid="6212064706962721255">"Tanlangan til"</string>
-    <string name="app_locales_picker_menu_title" msgid="7617427959223831373">"Ilova tillari"</string>
+    <string name="app_locales_picker_menu_title" msgid="3412278173933199721">"Ilova tillari"</string>
     <string name="app_locale_picker_summary" msgid="6742557329924446252">"Har bir ilova uchun tilni sozlash"</string>
-    <string name="app_locale_picker_title" msgid="2431448962911301366">"Ilova tili"</string>
+    <string name="app_locale_picker_title" msgid="8423365003726200684">"Ilova tili"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"Tavsiya etilgan tillar"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"Barcha tillar"</string>
     <string name="preference_of_system_locale_title" msgid="8067226276038751504">"Tizim tili"</string>
@@ -168,9 +168,6 @@
     <string name="desc_no_available_supported_locale" msgid="7883271726226947273">"Bu ilova uchun Sozlamalardan tilni tanlash imkonsiz"</string>
     <string name="desc_app_locale_disclaimer" msgid="5295933110644789052">"Bu til ilovadagi tillardan farq qilishi mumkin. Ayrim ilovalarda bu sozlama ishlamaydi."</string>
     <string name="desc_app_locale_selection_supported" msgid="6149467826636295127">"Faqat til tanlash imkoni bor ilovalar shu yerda chiqadi."</string>
-    <string name="desc_introduction_of_language_picker" msgid="1038423471887102449">"Tizimingiz, ilovalaringiz va veb-saytlaringiz siz tanlagan tillardan birinchi dastaklanadigan tildan foydalanadi."</string>
-    <string name="desc_notice_of_language_picker" msgid="3449290526457925447">"Har bir ilova uchun til tanlash uchun ilova tili sozlamalariga kiring."</string>
-    <string name="desc_locale_helper_footer_general" msgid="6967183342596405116">"Tillar haqida batafsil"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">Tanlangan tillar olib tashlansinmi?</item>
       <item quantity="one">Tanlangan til olib tashlansinmi?</item>
@@ -178,7 +175,7 @@
     <string name="dlg_remove_locales_message" msgid="8110560091134252067">"Matnlar keyin boshqa tilda chiqadi."</string>
     <string name="dlg_remove_locales_error_title" msgid="5875503658221562572">"Barcha tillarni o‘chirib tashlash mumkin emas"</string>
     <string name="dlg_remove_locales_error_message" msgid="6504279959974675302">"Kamida bitta tilni qoldiring"</string>
-    <string name="locale_not_translated" msgid="3071618135527110152">"Tizim tili sifatida mavjud emas"</string>
+    <string name="locale_not_translated" msgid="5079729745235316146">"Ayrim ilovalarda ishlamasligi mumkin"</string>
     <string name="action_drag_label_move_up" msgid="3392196942330705015">"Tepaga siljitish"</string>
     <string name="action_drag_label_move_down" msgid="9069518740553953426">"Pastga siljitish"</string>
     <string name="action_drag_label_move_top" msgid="2430471023612171619">"Tepaga o‘tkazish"</string>
@@ -1102,7 +1099,7 @@
     <string name="screen_resolution_summary_high" msgid="5611896959631297437">"1080p FHD+"</string>
     <string name="screen_resolution_summary_highest" msgid="2609112310453953756">"1440p QHD+"</string>
     <string name="screen_resolution_footer" msgid="6772341522952795647">"Asl hajmda koʻproq batareya quvvati sarflanadi. Tiniqlik almashtirilsa, ayrim ilovalar qayta ishga tushadi."</string>
-    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Tanlangan"</string>
+    <string name="screen_resolution_selected_a11y" msgid="6158451180032224977">"Tanlandi"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Ranglar"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Tabiiy"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Yorqin"</string>
@@ -1453,6 +1450,8 @@
     <string name="tether_settings_summary_usb_and_bluetooth_and_ethernet" msgid="5880591133984166550">"USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_all" msgid="7565193614882005775">"Hotspot, USB, Bluetooth, Ethernet"</string>
     <string name="tether_settings_summary_off" msgid="2526164899130351968">"Internet boshqa qurilmalarga ulashilmaydi"</string>
+    <!-- no translation found for tether_preference_summary_off (6266799346319794630) -->
+    <skip />
     <string name="tethering_interface_options" msgid="7575535888135143650">"Modem rejimi"</string>
     <string name="disable_wifi_hotspot_title" msgid="2167985468585290478">"Wi‑Fi hotspot ishlatilmasin"</string>
     <string name="disable_wifi_hotspot_when_usb_on" msgid="220439059794714583">"Internetni faqat USB orqali ulashish"</string>
@@ -4795,6 +4794,8 @@
     <string name="tare_min_balance_exempted" msgid="6693710075762973485">"Minimal toʻliq quvvat balansi (olib tashlangan)"</string>
     <string name="tare_min_balance_headless_app" msgid="6906353766678577244">"Minimal toʻliq quvvat balansi (qarovsiz tizim ilovasi)"</string>
     <string name="tare_min_balance_other_app" msgid="3404774196832506476">"Minimal toʻliq quvvat balansi (qolgan ilovalar)"</string>
+    <!-- no translation found for tare_min_balance_addition_app_updater (5391956072471201269) -->
+    <skip />
   <string-array name="tare_modifiers_subfactors">
     <item msgid="3325940509857535498">"Quvvatlanmoqda"</item>
     <item msgid="658627268149681677">"Mudroq"</item>
